// ================================================================================================
// UTXO å­ç³»ç»Ÿåè®®ï¼ˆä¸¥æ ¼éµå¾ªä¸»æµUTXOåŸåˆ™çš„æ‰©å±•å®ç°ï¼‰
// ================================================================================================
syntax = "proto3";
package pb.blockchain.utxo;

option go_package = "github.com/weisyn/v1/pb/blockchain/utxo";

/**
 * â–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆ
 * EUTXO ç³»ç»Ÿ - ä¸»æµUTXOåŸåˆ™ä¸‹çš„ä¸‰å±‚è½½ä½“æ‰©å±•
 * â–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆ
 * 
 * ğŸ¯ æ ¸å¿ƒè®¾è®¡åŸåˆ™ï¼ˆä¸¥æ ¼éµå¾ªæ¯”ç‰¹å¸UTXOæ¨¡å‹ï¼‰ï¼š
 * â€¢ **æ•°æ®æºå¤´çº¦æŸ**ï¼šæ‰€æœ‰UTXOæ•°æ®ä¸¥æ ¼æ¥æºäºTxOutputï¼Œä¸å‡­ç©ºåˆ›é€ ä¸šåŠ¡å­—æ®µ
 * â€¢ **äº¤æ˜“é©±åŠ¨**ï¼šç”¨æˆ·é€šè¿‡Transactionä¸åŒºå—é“¾äº¤äº’ï¼ŒUTXOåªè®°å½•äº¤æ˜“æ‰§è¡Œç»“æœ
 * â€¢ **èŒè´£å•ä¸€**ï¼šä¸“æ³¨çŠ¶æ€è®°å½•ã€ç”Ÿå‘½å‘¨æœŸç®¡ç†å’Œé«˜æ•ˆç´¢å¼•ï¼Œä¸å¤„ç†ä¸šåŠ¡é€»è¾‘
 * â€¢ **æƒé™å¤–ç½®**ï¼šæ‰€æœ‰æƒé™é€»è¾‘åœ¨Transaction.locking_conditionsä¸­ï¼ŒUTXOä¸å®šä¹‰æƒé™è§„åˆ™
 * 
 * ğŸ—ï¸ æ¶æ„å…³ç³»ï¼ˆæ•°æ®å•å‘æµåŠ¨ï¼‰ï¼š
 * Transaction.TxOutput â†’ UTXO.contentï¼ˆå¿ å®è®°å½•ï¼‰ â†’ APIå±‚æŸ¥è¯¢èšåˆ
 *        â†‘                     â†‘                      â†‘
 *    æƒé™å®šä¹‰             çŠ¶æ€è¿½è¸ª               ç”¨æˆ·è§†å›¾
 *    ä¸šåŠ¡é€»è¾‘             ç”Ÿå‘½å‘¨æœŸ               èšåˆå±•ç¤º
 * 
 * ğŸš€ æ ¸å¿ƒåˆ›æ–°ï¼ˆåœ¨ä¼ ç»ŸUTXOåŸºç¡€ä¸Šçš„æ‰©å±•ï¼‰ï¼š
 * 1. **ä¸‰å±‚è½½ä½“æ”¯æŒ**ï¼šAsset/Resource/Stateä¸‰ç§UTXOç±»å‹
 * 2. **å¹¶å‘å¼•ç”¨æœºåˆ¶**ï¼šResourceUTXOæ”¯æŒis_reference_onlyå¹¶å‘è®¿é—®
 * 3. **é›¶çŸ¥è¯†è¯æ˜**ï¼šStateUTXOé›†æˆZKè¯æ˜éªŒè¯èƒ½åŠ›
 * 4. **å­˜å‚¨ä¼˜åŒ–**ï¼šçƒ­æ•°æ®ç¼“å­˜vså†·æ•°æ®å¼•ç”¨çš„çµæ´»å­˜å‚¨ç­–ç•¥
 * 
 * âš–ï¸ èŒè´£è¾¹ç•Œï¼ˆä¸¥æ ¼é™åˆ¶ï¼‰ï¼š
 * âœ… æ‰¿æ‹…ï¼šå¿ å®è®°å½•TxOutputã€ç®¡ç†ç”Ÿå‘½å‘¨æœŸã€ç»´æŠ¤å¼•ç”¨è®¡æ•°ã€æä¾›åŸºç¡€æŸ¥è¯¢
 * âŒ ä¸æ‰¿æ‹…ï¼šæƒé™éªŒè¯ã€ä¸šåŠ¡é€»è¾‘ã€ç”¨æˆ·æ¥å£ã€å¤æ‚çŠ¶æ€æ¼”åŒ–
 * 
 * ğŸ’¡ è®¾è®¡å“²å­¦ï¼šUTXO = Transactionçš„å¿ å®é•œåƒ + åŒºå—é“¾çŠ¶æ€è¿½è¸ª
 * â–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆ
 */

// å¯¼å…¥ä¾èµ–æ¨¡å—
import "pb/blockchain/block/transaction/transaction.proto";

// ================================================================================================
// ğŸ”§ ç¬¬ä¸€éƒ¨åˆ†ï¼šæ ¸å¿ƒUTXOç»“æ„ï¼ˆä¸¥æ ¼éµå¾ªæ•°æ®æºå¤´çº¦æŸåŸåˆ™ï¼‰
// ================================================================================================

/**
 * â–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆ
 * UTXO - ä¸šåŠ¡å¯¼å‘çš„çŠ¶æ€è®°å½•ï¼ˆè§£å†³å®é™…é—®é¢˜è€Œéè¿½æ±‚è®¾è®¡å®Œå¤‡ï¼‰
 * â–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆ
 * 
 * ğŸ¯ æ ¸å¿ƒä½¿å‘½ï¼šè§£å†³ç”¨æˆ·çœŸå®ä¸šåŠ¡éœ€æ±‚
 * â€¢ æ”¯æŒé«˜æ•ˆçš„ä½™é¢æŸ¥è¯¢ï¼š"æˆ‘æœ‰å¤šå°‘WESï¼Ÿå¤šå°‘TokenAï¼Ÿ"
 * â€¢ æ”¯æŒèµ„æºçŠ¶æ€ç®¡ç†ï¼š"æˆ‘çš„åˆçº¦åœ¨å“ªï¼Ÿèƒ½å¦è¢«æ¶ˆè´¹ï¼Ÿ"
 * â€¢ æ”¯æŒå¹¶å‘å®‰å…¨æ§åˆ¶ï¼šç¡®ä¿ResourceUTXOä¸ä¼šè¢«æ„å¤–ç§»é™¤
 * â€¢ æ”¯æŒäº¤æ˜“éªŒè¯çº¦æŸï¼šæä¾›éªŒè¯æ‰€éœ€çš„çŠ¶æ€ä¿¡æ¯
 * 
 * ğŸ“‹ æ•°æ®æºå¤´çº¦æŸï¼ˆä¸¥æ ¼æ‰§è¡Œï¼‰ï¼š
 * â€¢ **ä¸šåŠ¡å†…å®¹**ï¼šå®Œå…¨æ¥è‡ªpb.blockchain.core.TxOutputï¼Œä¸å¢åˆ æ”¹
 * â€¢ **çº¦æŸä¿¡æ¯**ï¼šä»…åŒ…å«å½±å“äº¤æ˜“éªŒè¯çš„çŠ¶æ€ï¼ˆå¦‚å¼•ç”¨è®¡æ•°ï¼‰
 * â€¢ **åˆ é™¤å†—ä½™**ï¼šç§»é™¤å¯è®¡ç®—çš„ç»Ÿè®¡ä¿¡æ¯å’Œæè¿°æ€§å­—æ®µ
 * 
 * ğŸ”„ ç”Ÿå‘½å‘¨æœŸçº¦æŸï¼š
 * 1. **åˆ›å»º**ï¼šTransactionæ‰§è¡Œ â†’ äº§ç”ŸTxOutput â†’ åˆ›å»ºå¯¹åº”UTXO
 * 2. **å¯ç”¨**ï¼šstatus=AVAILABLE â†’ å¯è¢«å¼•ç”¨æˆ–æ¶ˆè´¹
 * 3. **å¼•ç”¨**ï¼ˆä»…ResourceUTXOï¼‰ï¼šis_reference_only=true â†’ reference_count++ï¼Œç¦æ­¢æ¶ˆè´¹
 * 4. **æ¶ˆè´¹**ï¼šis_reference_only=false â†’ ç§»é™¤UTXOï¼ˆResourceUTXOéœ€reference_count=0ï¼‰
 * 
 * ğŸ’¡ è®¾è®¡çº¦æŸï¼ˆé˜²æ­¢åŠŸèƒ½è”“å»¶ï¼‰ï¼š
 * â€¢ **çº¦æŸé©±åŠ¨**ï¼šåªå­˜å‚¨å½±å“äº¤æ˜“éªŒè¯çš„çŠ¶æ€ä¿¡æ¯
 * â€¢ **ä¸šåŠ¡æ”¯æ’‘**ï¼šä¸ºæ ¸å¿ƒæŸ¥è¯¢æä¾›åŸºç¡€æ•°æ®ï¼Œå¤æ‚æŸ¥è¯¢åœ¨APIå±‚å®ç°
 * â€¢ **å¯è®¡ç®—æ’é™¤**ï¼šä¸å­˜å‚¨å¯é€šè¿‡éå†åŒºå—é“¾è®¡ç®—çš„ä¿¡æ¯
 * â€¢ **æè¿°æ€§æ’é™¤**ï¼šä¸å­˜å‚¨çº¯æè¿°æ€§ã€å¯¹çº¦æŸæ— å½±å“çš„ä¿¡æ¯
 * â–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆ
 */
message UTXO {
  // ==================== ğŸ¯ æ ¸å¿ƒèº«ä»½æ ‡è¯† ====================
  pb.blockchain.core.OutPoint outpoint = 1;           // UTXOå”¯ä¸€ä½ç½®å¼•ç”¨ï¼ˆtx_hash + output_indexï¼‰
                                                       // æ ¼å¼ï¼š32å­—èŠ‚tx_id + 4å­—èŠ‚output_index
                                                       // ç”¨é€”ï¼šç²¾ç¡®å®šä½åŒºå—é“¾ä¸­çš„ç‰¹å®šè¾“å‡º
                                                       // çº¦æŸï¼šoutpointå¿…é¡»å”¯ä¸€ï¼Œä¸å¯é‡å¤
  
  UTXOCategory category = 2;                           // UTXOç±»å‹ï¼ˆAsset/Resource/Stateï¼‰
                                                       // æ¥æºï¼šä»TxOutput.output_contentç±»å‹è‡ªåŠ¨æ¨å¯¼
                                                       // ç”¨é€”ï¼šæ”¯æŒæŒ‰ç±»å‹æŸ¥è¯¢å’Œåˆ†ç±»å¤„ç†
                                                       // çº¦æŸï¼šå¿…é¡»ä¸TxOutputå†…å®¹ç±»å‹ä¿æŒä¸€è‡´
  
  bytes owner_address = 3;                            // æ‰€æœ‰è€…åœ°å€ï¼ˆ20å­—èŠ‚WESåœ°å€ï¼‰
                                                       // æ¥æºï¼šTxOutput.ownerå­—æ®µ
                                                       // ç”¨é€”ï¼šæ”¯æŒ"æˆ‘çš„èµ„äº§/èµ„æº"æŸ¥è¯¢
                                                       // çº¦æŸï¼šå¿…é¡»æ˜¯æœ‰æ•ˆçš„WESåœ°å€æ ¼å¼
                                                       // ä¸šåŠ¡ï¼šç”¨äºé«˜æ•ˆçš„æŒ‰ç”¨æˆ·æŸ¥è¯¢ç´¢å¼•
  
  // ==================== â° åˆ›å»ºä¿¡æ¯ ====================
  uint64 block_height = 4;                            // åˆ›å»ºåŒºå—é«˜åº¦ï¼ˆä»1å¼€å§‹é€’å¢ï¼‰
                                                       // æ¥æºï¼šäº¤æ˜“è¢«æ‰“åŒ…è¿›åŒºå—æ—¶çš„é«˜åº¦
                                                       // ç”¨é€”ï¼šUTXOå¹´é¾„è®¡ç®—ã€æ—¶é—´é”éªŒè¯
                                                       // çº¦æŸï¼šå¿…é¡» > 0ï¼Œä¸” <= å½“å‰é“¾é«˜åº¦
  
  uint64 created_timestamp = 5;                       // åˆ›å»ºæ—¶é—´æˆ³ï¼ˆUnixæ—¶é—´ï¼Œç§’ï¼‰
                                                       // æ¥æºï¼šåŒºå—å¤´çš„timestampå­—æ®µ
                                                       // ç”¨é€”ï¼šUTXOåˆ›å»ºæ—¶é—´æŸ¥è¯¢ã€TTLè®¡ç®—
                                                       // çº¦æŸï¼šå¿…é¡» > 0ï¼Œä¸”åˆç†çš„æ—¶é—´èŒƒå›´
  
  // ==================== ğŸ”„ é€šç”¨çŠ¶æ€ä¿¡æ¯ ====================
  UTXOLifecycleStatus status = 10;                    // ç”Ÿå‘½å‘¨æœŸçŠ¶æ€ï¼ˆå½±å“äº¤æ˜“éªŒè¯ï¼‰
                                                       // ç”¨é€”ï¼šäº¤æ˜“éªŒè¯æ—¶æ£€æŸ¥UTXOæ˜¯å¦å¯ç”¨
                                                       // çº¦æŸï¼šAVAILABLEçŠ¶æ€æ‰èƒ½è¢«å¼•ç”¨/æ¶ˆè´¹
                                                       // ä¸šåŠ¡ï¼šæ”¯æŒUTXOçŠ¶æ€è¿‡æ»¤æŸ¥è¯¢
  
  // ==================== ğŸ¯ ç±»å‹ç‰¹å®šçš„çº¦æŸä¿¡æ¯ï¼ˆoneofä¼˜åŒ–ï¼‰====================
  oneof type_specific_constraints {
    AssetUTXOConstraints asset_constraints = 11;      // AssetUTXOç‰¹å®šçº¦æŸï¼ˆå½“å‰ä¸ºç©ºï¼Œé¢„ç•™æ‰©å±•ï¼‰
    ResourceUTXOConstraints resource_constraints = 12; // ResourceUTXOç‰¹å®šçº¦æŸï¼ˆå¼•ç”¨è®¡æ•°ç­‰ï¼‰
    StateUTXOConstraints state_constraints = 13;       // StateUTXOç‰¹å®šçº¦æŸï¼ˆTTLç­‰ï¼‰
  }
  
  // ==================== ğŸ“¦ TxOutputå†…å®¹å­˜å‚¨ç­–ç•¥ ====================
  oneof content_strategy {
    pb.blockchain.core.TxOutput cached_output = 20;   // çƒ­æ•°æ®ï¼šç¼“å­˜å®Œæ•´TxOutputï¼ˆæ”¯æŒé«˜æ•ˆæŸ¥è¯¢ï¼‰
                                                       // é€‚ç”¨ï¼šé¢‘ç¹è®¿é—®çš„UTXOï¼ˆå¦‚æ´»è·ƒèµ„äº§ã€çƒ­é—¨èµ„æºï¼‰
                                                       // ä¼˜åŠ¿ï¼šé¿å…å›æº¯åŒºå—é“¾ï¼Œæå‡æŸ¥è¯¢æ€§èƒ½
                                                       // æˆæœ¬ï¼šå¢åŠ å­˜å‚¨ç©ºé—´å ç”¨
                                                       
    bool reference_only = 21;                         // å†·æ•°æ®ï¼šä»…å¼•ç”¨ï¼ŒæŸ¥è¯¢æ—¶å›æº¯è·å–å†…å®¹
                                                       // é€‚ç”¨ï¼šä¸å¸¸è®¿é—®çš„UTXOï¼ˆå¦‚å†å²çŠ¶æ€ã€å†·é—¨èµ„æºï¼‰
                                                       // ä¼˜åŠ¿ï¼šèŠ‚çœå­˜å‚¨ç©ºé—´ï¼Œå‡å°‘å†—ä½™
                                                       // æˆæœ¬ï¼šæŸ¥è¯¢æ—¶éœ€è¦é¢å¤–çš„åŒºå—é“¾å›æº¯æ“ä½œ
  }
}

/**
 * UTXOCategory - UTXOç±»å‹åˆ†ç±»ï¼ˆä¸¥æ ¼å¯¹åº”Transaction.TxOutputçš„ä¸‰ç§ç±»å‹ï¼‰
 * 
 * ğŸ¯ åˆ†ç±»ä¾æ®ï¼šæ ¹æ®TxOutput.output_contentçš„ç±»å‹è‡ªåŠ¨æ¨å¯¼
 * â€¢ AssetOutput â†’ UTXO_CATEGORY_ASSET
 * â€¢ ResourceOutput â†’ UTXO_CATEGORY_RESOURCE  
 * â€¢ StateOutput â†’ UTXO_CATEGORY_STATE
 */
enum UTXOCategory {
  UTXO_CATEGORY_UNKNOWN = 0;                          // æœªçŸ¥ç±»å‹ï¼ˆä¸åº”å‡ºç°ï¼‰
  UTXO_CATEGORY_ASSET = 1;                            // ä»·å€¼è½½ä½“ï¼šæ¥è‡ªAssetOutput
  UTXO_CATEGORY_RESOURCE = 2;                         // èƒ½åŠ›è½½ä½“ï¼šæ¥è‡ªResourceOutput
  UTXO_CATEGORY_STATE = 3;                            // è¯æ®è½½ä½“ï¼šæ¥è‡ªStateOutput
}

/**
 * AssetUTXOConstraints - AssetUTXOç‰¹å®šçš„çº¦æŸä¿¡æ¯
 * 
 * ğŸ¯ è®¾è®¡ç†å¿µï¼šAssetUTXOç›¸å¯¹ç®€å•ï¼Œä¸»è¦ç”¨äºä»·å€¼è½¬ç§»
 * å½“å‰ä¸ºé¢„ç•™ç»“æ„ï¼Œæœªæ¥å¯æ‰©å±•é”å®šæœŸã€å†»ç»“çŠ¶æ€ç­‰åŠŸèƒ½
 */
message AssetUTXOConstraints {
  // å½“å‰AssetUTXOæ— ç‰¹æ®Šçº¦æŸéœ€æ±‚ï¼Œé¢„ç•™æ‰©å±•ç©ºé—´
  // æœªæ¥å¯èƒ½çš„æ‰©å±•ï¼š
  // optional uint64 lock_until_height = 1;    // é”å®šåˆ°æŒ‡å®šé«˜åº¦
  // optional bool is_frozen = 2;              // æ˜¯å¦è¢«å†»ç»“
  // optional string asset_metadata = 3;       // èµ„äº§å…ƒæ•°æ®å¼•ç”¨
}

/**
 * ResourceUTXOConstraints - ResourceUTXOç‰¹å®šçš„çº¦æŸä¿¡æ¯
 * 
 * ğŸ¯ è®¾è®¡ç†å¿µï¼šResourceUTXOéœ€è¦æ”¯æŒå¹¶å‘å¼•ç”¨æœºåˆ¶ï¼ŒåŒ…å«å¼•ç”¨è®¡æ•°ç­‰çº¦æŸ
 * è¿™äº›çº¦æŸç›´æ¥å½±å“äº¤æ˜“éªŒè¯é€»è¾‘
 */
message ResourceUTXOConstraints {
  uint64 reference_count = 1;                         // å½“å‰æ´»è·ƒå¼•ç”¨è®¡æ•°
                                                       // çº¦æŸé€»è¾‘ï¼šreference_count > 0 æ—¶ç¦æ­¢æ¶ˆè´¹ResourceUTXO
                                                       // ä¸šåŠ¡ä»·å€¼ï¼šç¡®ä¿æ­£åœ¨ä½¿ç”¨çš„èµ„æºä¸ä¼šè¢«æ„å¤–ç§»é™¤
                                                       // æ›´æ–°æ—¶æœºï¼š
                                                       //   - TxInput.is_reference_only=trueæ—¶ï¼šreference_count++
                                                       //   - å¼•ç”¨äº¤æ˜“å®Œæˆæ—¶ï¼šreference_count--
                                                       //   - TxInput.is_reference_only=falseæ—¶ï¼šå¿…é¡»reference_count=0
  
  optional uint64 max_concurrent_references = 2;      // æœ€å¤§å¹¶å‘å¼•ç”¨æ•°é™åˆ¶ï¼ˆå¯é€‰ï¼‰
                                                       // ç”¨é€”ï¼šé˜²æ­¢èµ„æºè¢«è¿‡åº¦å¹¶å‘ä½¿ç”¨
                                                       // çº¦æŸï¼šnew_referenceæ—¶æ£€æŸ¥æ˜¯å¦è¶…é™
                                                       // 0è¡¨ç¤ºæ— é™åˆ¶ï¼ˆé»˜è®¤è¡Œä¸ºï¼‰
  
  optional uint64 total_reference_count = 3;          // å†å²æ€»å¼•ç”¨æ¬¡æ•°ï¼ˆå¯é€‰ç»Ÿè®¡ï¼‰
                                                       // ç”¨é€”ï¼šèµ„æºçƒ­åº¦ç»Ÿè®¡ã€ä½¿ç”¨åˆ†æ
                                                       // çº¦æŸï¼šä»…ç”¨äºå±•ç¤ºï¼Œä¸å½±å“äº¤æ˜“éªŒè¯
                                                       // è¯´æ˜ï¼šè™½ç„¶æ˜¯ç»Ÿè®¡ä¿¡æ¯ï¼Œä½†å¯¹èµ„æºå®šä»·æœ‰ä¸šåŠ¡ä»·å€¼
}

/**
 * StateUTXOConstraints - StateUTXOç‰¹å®šçš„çº¦æŸä¿¡æ¯
 * 
 * ğŸ¯ è®¾è®¡ç†å¿µï¼šStateUTXOå¯èƒ½åŒ…å«TTLã€è¿‡æœŸç­–ç•¥ç­‰çŠ¶æ€ç®¡ç†çº¦æŸ
 * æ”¯æŒé›¶çŸ¥è¯†è¯æ˜çš„çŠ¶æ€è®°å½•å’Œæ—¶æ•ˆæ€§ç®¡ç†
 */
message StateUTXOConstraints {
  optional uint64 ttl_seconds = 1;                    // ç”Ÿå­˜æ—¶é—´ï¼ˆç§’ï¼‰
                                                       // ç”¨é€”ï¼šçŠ¶æ€è¿‡æœŸç®¡ç†ï¼Œæ¸…ç†å†å²æ•°æ®
                                                       // çº¦æŸï¼šè¿‡æœŸåçŠ¶æ€å˜ä¸ºEXPIREDï¼Œä½†ä»å¯æŸ¥è¯¢
                                                       // 0è¡¨ç¤ºæ°¸ä¸è¿‡æœŸï¼ˆé»˜è®¤è¡Œä¸ºï¼‰
  
  optional uint64 expires_at_timestamp = 2;           // ç»å¯¹è¿‡æœŸæ—¶é—´æˆ³
                                                       // è®¡ç®—ï¼šcreated_timestamp + ttl_seconds
                                                       // ç”¨é€”ï¼šå¿«é€Ÿåˆ¤æ–­çŠ¶æ€æ˜¯å¦è¿‡æœŸ
                                                       // çº¦æŸï¼šè¿‡æœŸæ£€æŸ¥çš„ä¸»è¦ä¾æ®
  
  optional uint32 retention_policy = 3;               // ä¿ç•™ç­–ç•¥ï¼ˆä½æ©ç ï¼‰
                                                       // bit 0: æ˜¯å¦å…è®¸è¿‡æœŸååˆ é™¤
                                                       // bit 1: æ˜¯å¦éœ€è¦å½’æ¡£åˆ°å†·å­˜å‚¨
                                                       // bit 2: æ˜¯å¦éœ€è¦ä¿ç•™ZKè¯æ˜
                                                       // ç”¨é€”ï¼šç²¾ç»†åŒ–çš„çŠ¶æ€ç”Ÿå‘½å‘¨æœŸç®¡ç†
}

/**
 * UTXOLifecycleStatus - UTXOç”Ÿå‘½å‘¨æœŸçŠ¶æ€ï¼ˆç®€åŒ–æ˜ç¡®ï¼‰
 * 
 * ğŸ¯ è®¾è®¡ç†å¿µï¼šåæ˜ UTXOåœ¨åŒºå—é“¾ç³»ç»Ÿä¸­çš„å®é™…çŠ¶æ€ï¼Œæ”¯æŒå¹¶å‘å¼•ç”¨æœºåˆ¶
 * 
 * ğŸ“‹ çŠ¶æ€è½¬æ¢è§„åˆ™ï¼š
 * â€¢ AssetUTXO: AVAILABLE â†’ CONSUMEDï¼ˆç®€å•æ¶ˆè´¹æ¨¡å¼ï¼‰
 * â€¢ ResourceUTXO: AVAILABLE â†’ REFERENCEDï¼ˆå¼•ç”¨æ—¶ï¼‰â†’ AVAILABLEï¼ˆå¼•ç”¨ç»“æŸï¼‰â†’ CONSUMEDï¼ˆæœ€ç»ˆæ¶ˆè´¹ï¼‰
 * â€¢ StateUTXO: AVAILABLE â†’ EXPIREDï¼ˆTTLè¿‡æœŸï¼‰â†’ AVAILABLEï¼ˆå¯ç»§ç»­ä½¿ç”¨æˆ–è¢«æ¸…ç†ï¼‰
 * 
 * âš ï¸ çŠ¶æ€è½¬æ¢çº¦æŸï¼š
 * â€¢ AVAILABLE: æ‰€æœ‰æ“ä½œå‡å¯æ‰§è¡Œï¼ˆå¼•ç”¨ã€æ¶ˆè´¹ï¼‰
 * â€¢ REFERENCED: åªèƒ½å¼•ç”¨ï¼Œä¸èƒ½æ¶ˆè´¹ï¼ˆResourceUTXOä¸“ç”¨ï¼‰
 * â€¢ CONSUMED: ç»ˆæ€ï¼ŒUTXOå·²ä»å¯ç”¨é›†åˆç§»é™¤
 * â€¢ EXPIRED: StateUTXOä¸“ç”¨ï¼Œè¿‡æœŸä½†ä»å¯æŸ¥è¯¢
 */
enum UTXOLifecycleStatus {
  UTXO_LIFECYCLE_UNKNOWN = 0;                         // æœªçŸ¥çŠ¶æ€ï¼ˆä¸åº”å‡ºç°ï¼Œç”¨äºé”™è¯¯æ£€æµ‹ï¼‰
  UTXO_LIFECYCLE_AVAILABLE = 1;                       // å¯ç”¨çŠ¶æ€ï¼šå¯è¢«å¼•ç”¨æˆ–æ¶ˆè´¹
                                                       // é€‚ç”¨ï¼šæ‰€æœ‰ç±»å‹çš„UTXOçš„æ­£å¸¸çŠ¶æ€
                                                       // çº¦æŸï¼šå…è®¸æ‰€æœ‰ç±»å‹çš„æ“ä½œ
                                                       
  UTXO_LIFECYCLE_REFERENCED = 2;                      // è¢«å¼•ç”¨çŠ¶æ€ï¼šResourceUTXOæ­£åœ¨è¢«å¹¶å‘å¼•ç”¨
                                                       // é€‚ç”¨ï¼šä»…ResourceUTXOï¼Œå½“reference_count > 0æ—¶
                                                       // çº¦æŸï¼šåªå…è®¸å¼•ç”¨æ“ä½œï¼Œç¦æ­¢æ¶ˆè´¹æ“ä½œ
                                                       
  UTXO_LIFECYCLE_CONSUMED = 3;                        // å·²æ¶ˆè´¹çŠ¶æ€ï¼šUTXOå·²è¢«èŠ±è´¹ï¼Œä»å¯ç”¨é›†åˆç§»é™¤
                                                       // é€‚ç”¨ï¼šæ‰€æœ‰ç±»å‹çš„UTXOçš„ç»ˆæ€
                                                       // çº¦æŸï¼šç¦æ­¢æ‰€æœ‰æ“ä½œï¼Œä»…ç”¨äºå†å²è®°å½•
                                                       
  UTXO_LIFECYCLE_EXPIRED = 4;                         // å·²è¿‡æœŸçŠ¶æ€ï¼šStateUTXOçš„TTLå·²åˆ°æœŸï¼ˆä½†ä»å¯è®¿é—®ï¼‰
                                                       // é€‚ç”¨ï¼šä»…StateUTXOï¼Œå½“è¶…è¿‡TTLæ—¶é—´æ—¶
                                                       // çº¦æŸï¼šå¯æŸ¥è¯¢è®¿é—®ï¼Œä½†å¯èƒ½è¢«æ¸…ç†
}

// ================================================================================================
// ğŸ—„ï¸ ç¬¬äºŒéƒ¨åˆ†ï¼šUTXOé›†åˆç®¡ç†ï¼ˆç®€åŒ–æ ¸å¿ƒåŠŸèƒ½ï¼‰
// ================================================================================================

/**
 * â–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆ
 * UTXOSet - æœ€å°å¿…è¦åŠŸèƒ½çš„UTXOé›†åˆç®¡ç†ï¼ˆé¿å…åŠŸèƒ½è”“å»¶ï¼‰
 * â–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆ
 * 
 * ğŸ¯ å”¯ä¸€èŒè´£ï¼šUTXOé›†åˆçš„å®Œæ•´æ€§ä¿è¯
 * â€¢ Merkleæ ¹éªŒè¯ï¼šç¡®ä¿UTXOé›†åˆæ•°æ®å®Œæ•´æ€§
 * â€¢ è¿™æ˜¯åŒºå—é“¾ç³»ç»Ÿçš„åŸºç¡€è¦æ±‚ï¼Œå¿…é¡»ä¿ç•™
 * 
 * âŒ ç§»é™¤çš„å†—ä½™åŠŸèƒ½ï¼š
 * â€¢ å¼•ç”¨è®¡æ•°ç®¡ç† â†’ å·²é›†æˆåˆ°UTXO.reference_countä¸­ï¼Œæ— éœ€é‡å¤
 * â€¢ ç»Ÿè®¡ä¿¡æ¯ â†’ å¯é€šè¿‡éå†UTXOé›†åˆè®¡ç®—ï¼Œæ— éœ€å­˜å‚¨
 * â€¢ ç‰ˆæœ¬è¿½è¸ª â†’ å¯é€šè¿‡åŒºå—é«˜åº¦æ¨å¯¼ï¼Œæ— éœ€é¢å¤–å­—æ®µ
 * 
 * ğŸ’¡ è®¾è®¡å“²å­¦ï¼šUTXOé›†åˆåªè´Ÿè´£å®Œæ•´æ€§ï¼Œä¸è´Ÿè´£ç»Ÿè®¡å’Œç›‘æ§
 * â–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆ
 */
message UTXOSet {
  // ==================== ğŸ”’ å”¯ä¸€å¿…è¦åŠŸèƒ½ï¼šå®Œæ•´æ€§ä¿è¯ ====================
  bytes merkle_root = 1;                              // UTXOé›†åˆMerkleæ ¹ï¼ˆå”¯ä¸€å¿…è¦çš„å®Œæ•´æ€§éªŒè¯ï¼‰
  uint64 last_update_height = 2;                      // æœ€åæ›´æ–°åŒºå—é«˜åº¦ï¼ˆMerkleæ ¹å¯¹åº”çš„é«˜åº¦ï¼‰
}

// ================================================================================================
// ğŸ“‹ ç¬¬ä¸‰éƒ¨åˆ†ï¼šä¸šåŠ¡æ”¯æ’‘èƒ½åŠ›å’Œä½¿ç”¨çº¦æŸ
// ================================================================================================

/**
 * â–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆ
 * ä¸šåŠ¡æ”¯æ’‘èƒ½åŠ›è¯´æ˜ï¼ˆè§£å†³ç”¨æˆ·å®é™…é—®é¢˜çš„è®¾è®¡ï¼‰
 * â–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆ
 * 
 * ğŸ¯ æ ¸å¿ƒä¸šåŠ¡æ”¯æ’‘ï¼š
 * UTXOç³»ç»Ÿä½¿ç”¨pb.blockchain.core.OutPointç»“æ„æ¥æ ‡è¯†UTXOä½ç½®ã€‚
 * è®¾è®¡ä¸“æ³¨è§£å†³ç”¨æˆ·çœŸå®ä¸šåŠ¡éœ€æ±‚ï¼Œé¿å…æ— æ„ä¹‰çš„åŠŸèƒ½æ‰©å±•ã€‚
 * 
 * ğŸ’° ä¸šåŠ¡åœºæ™¯1ï¼šé«˜æ•ˆä½™é¢æŸ¥è¯¢
 * ```
 * ç”¨æˆ·é—®é¢˜ï¼š"æˆ‘æœ‰å¤šå°‘WESï¼Ÿå¤šå°‘TokenAï¼Ÿ"
 * UTXOæ”¯æ’‘ï¼š
 * â€¢ owner_addresså­—æ®µæ”¯æŒæŒ‰ç”¨æˆ·æŸ¥è¯¢
 * â€¢ categoryå­—æ®µæ”¯æŒç­›é€‰AssetUTXO
 * â€¢ cached_outputä¸­åŒ…å«å®Œæ•´çš„èµ„äº§ä¿¡æ¯
 * 
 * APIå±‚å®ç°ï¼š
 * assetUTXOs = query_by_owner_and_category(user, ASSET)
 * for utxo in assetUTXOs:
 *   asset = extract_asset_from_cached_output(utxo)
 *   aggregate_balance(asset.token_id, asset.amount)
 * ```
 * 
 * ğŸ”§ ä¸šåŠ¡åœºæ™¯2ï¼šèµ„æºçŠ¶æ€ç®¡ç†
 * ```
 * ç”¨æˆ·é—®é¢˜ï¼š"æˆ‘çš„åˆçº¦åœ¨å“ªï¼Ÿèƒ½å¦è¢«å‡çº§ï¼Ÿ"
 * UTXOæ”¯æ’‘ï¼š
 * â€¢ reference_countå­—æ®µæä¾›å¹¶å‘å®‰å…¨çº¦æŸ
 * â€¢ statuså­—æ®µåæ˜ èµ„æºå¯ç”¨æ€§
 * â€¢ cached_outputä¸­åŒ…å«å®Œæ•´çš„èµ„æºä¿¡æ¯
 * 
 * çº¦æŸé€»è¾‘ï¼š
 * if utxo.reference_count > 0:
 *   return "åˆçº¦æ­£åœ¨è¢«ä½¿ç”¨ï¼Œæ— æ³•å‡çº§"
 * else:
 *   return "å¯ä»¥å‡çº§åˆçº¦"
 * ```
 * 
 * âš–ï¸ è®¾è®¡çº¦æŸï¼ˆé˜²æ­¢åŠŸèƒ½è”“å»¶ï¼‰ï¼š
 * âŒ ä¸å­˜å‚¨ç»Ÿè®¡ä¿¡æ¯ï¼šå¯é€šè¿‡åŒºå—é“¾è®¡ç®—çš„ä¿¡æ¯ä¸€å¾‹ä¸å­˜å‚¨
 * âŒ ä¸å­˜å‚¨æè¿°ä¿¡æ¯ï¼šå¯¹äº¤æ˜“éªŒè¯æ— å½±å“çš„å­—æ®µä¸€å¾‹åˆ é™¤
 * âŒ ä¸å®ç°æŸ¥è¯¢é€»è¾‘ï¼šå¤æ‚æŸ¥è¯¢åœ¨APIå±‚å®ç°ï¼ŒUTXOåªæä¾›åŸºç¡€æ•°æ®
 * âŒ ä¸å®šä¹‰æƒé™è§„åˆ™ï¼šæƒé™åœ¨Transaction.locking_conditionsä¸­å®šä¹‰
 * 
 * âœ… æ”¯æŒé«˜æ•ˆæŸ¥è¯¢ï¼šä¸ºç”¨æˆ·ä½™é¢ã€èµ„æºåˆ—è¡¨æŸ¥è¯¢æä¾›å¿…è¦æ•°æ®
 * âœ… æ”¯æŒäº¤æ˜“çº¦æŸï¼šreference_countç­‰å­—æ®µå½±å“äº¤æ˜“éªŒè¯
 * âœ… æ”¯æŒå¹¶å‘å®‰å…¨ï¼šç¡®ä¿ResourceUTXOåœ¨ä½¿ç”¨æ—¶ä¸è¢«ç§»é™¤
 * âœ… æ”¯æŒçŠ¶æ€è¿½è¸ªï¼šå¿ å®åæ˜ Transactionæ‰§è¡Œç»“æœ
 * 
 * ğŸ’¡ æ­£ç¡®çš„ä¸šåŠ¡å®ç°æ–¹å¼ï¼š
 * ```
 * // âœ… ä½™é¢æŸ¥è¯¢ï¼šé€šè¿‡UTXOèšåˆè®¡ç®—
 * func GetUserBalance(address) {
 *   utxos = queryAssetUTXOs(address)
 *   return aggregateBalance(utxos)
 * }
 * 
 * // âœ… èµ„æºæŸ¥è¯¢ï¼šåˆ©ç”¨UTXOçŠ¶æ€ä¿¡æ¯
 * func GetUserResources(address) {
 *   utxos = queryResourceUTXOs(address)
 *   return extractResourceInfo(utxos)
 * }
 * 
 * // âœ… å¹¶å‘å®‰å…¨ï¼šåˆ©ç”¨å¼•ç”¨è®¡æ•°çº¦æŸ
 * func ValidateResourceConsumption(utxo) {
 *   if utxo.reference_count > 0:
 *     return error("resource in use")
 *   return ok
 * }
 * ```
 * 
 * ğŸ¯ è®¾è®¡å“²å­¦ï¼šUTXO = ä¸šåŠ¡æŸ¥è¯¢çš„åŸºç¡€æ•°æ® + äº¤æ˜“éªŒè¯çš„çº¦æŸä¿¡æ¯
 * â–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆ
 */
