// Package processor å®ç°åŒºå—å¤„ç†æœåŠ¡
package processor

import (
	"context"
	"fmt"
	"strconv"
	"strings"

	core "github.com/weisyn/v1/pb/blockchain/block"
	transaction "github.com/weisyn/v1/pb/blockchain/block/transaction"
	utxopb "github.com/weisyn/v1/pb/blockchain/utxo"
)

// executeTransactions éªŒè¯åŒºå—ä¸­çš„æ‰€æœ‰äº¤æ˜“æ‰§è¡Œç»“æœ
//
// ğŸ¯ **äº¤æ˜“éªŒè¯æµç¨‹**ï¼š
// æ ¹æ®WESçš„ä¸¤ç§è¾“å…¥ã€ä¸‰ç§è¾“å‡ºæ¶æ„ï¼Œåˆ†ç±»éªŒè¯äº¤æ˜“æ‰§è¡Œç»“æœï¼š
// 1. StateOutput: éªŒè¯ZKè¯æ˜å’Œæ‰§è¡Œç»“æœå“ˆå¸Œ
// 2. ResourceOutput: éªŒè¯èµ„æºç”Ÿå‘½å‘¨æœŸ
// 3. AssetOutput: æœ€ç»ˆç¡®è®¤äº¤æ˜“æœ‰æ•ˆæ€§ï¼ˆå·²åœ¨æäº¤æ—¶éªŒè¯ï¼‰
// 4. å¼•ç”¨å‹è¾“å…¥: éªŒè¯å¼•ç”¨UTXOçš„æœ‰æ•ˆæ€§
//
// âœ… **èŒè´£åˆ†ç¦»**ï¼š
// - UTXOå˜æ›´ â†’ DataWriter å¤„ç†ï¼ˆåœ¨åç»­çš„ storeBlock ä¸­å®Œæˆï¼‰
// - å¼•ç”¨è®¡æ•°ç®¡ç† â†’ processReferenceCounts å¤„ç†
// - äº¤æ˜“éªŒè¯ â†’ executeTransactions å¤„ç†ï¼ˆæœ¬å‡½æ•°ï¼‰
//
// âŒ **ä¸é‡æ–°æ‰§è¡Œæ™ºèƒ½åˆçº¦**ï¼ˆåˆçº¦å·²åœ¨TXå±‚æ‰§è¡Œï¼‰
//
// å‚æ•°ï¼š
//   - ctx: ä¸Šä¸‹æ–‡
//   - block: åŒ…å«äº¤æ˜“çš„åŒºå—
//
// è¿”å›ï¼š
//   - error: éªŒè¯é”™è¯¯
func (s *Service) executeTransactions(ctx context.Context, block *core.Block) error {
	if s.logger != nil {
		s.logger.Debugf("å¼€å§‹éªŒè¯åŒºå—äº¤æ˜“æ‰§è¡Œç»“æœï¼Œäº¤æ˜“æ•°: %d", len(block.Body.Transactions))
	}

	if block == nil || block.Header == nil {
		return fmt.Errorf("åŒºå—/åŒºå—å¤´ä¸ºç©º")
	}

	// âœ… å¼ºæ ¡éªŒï¼šåŒä¸€å—å†…â€œå¼•ç”¨(ReferenceOnly)â€ä¸â€œæ¶ˆè´¹(Consume)â€ä¸èƒ½æŒ‡å‘åŒä¸€ä¸ª OutPointã€‚
	// å¦åˆ™ä¼šé€ æˆè¯­ä¹‰ä¸ä¸€è‡´ï¼šResourceUTXO å¤„äºè¢«å¼•ç”¨çŠ¶æ€æ—¶ç¦æ­¢æ¶ˆè´¹ï¼ˆutxo.proto çº¦æŸï¼‰ã€‚
	referencedInBlock := make(map[string]struct{})
	for _, tx := range block.Body.Transactions {
		if tx == nil {
			continue
		}
		for _, in := range tx.Inputs {
			if in == nil || in.PreviousOutput == nil {
				continue
			}
			if in.IsReferenceOnly {
				referencedInBlock[outpointKey(in.PreviousOutput)] = struct{}{}
			}
		}
	}

	// éå†æ¯ä¸ªäº¤æ˜“å¹¶åˆ†ç±»éªŒè¯
	for i, tx := range block.Body.Transactions {
		if tx == nil {
			if s.logger != nil {
				s.logger.Warnf("åŒºå—ç¬¬ %d ä¸ªäº¤æ˜“ä¸ºç©ºï¼Œè·³è¿‡", i)
			}
			continue
		}

		// ========== 1. å¤„ç†StateOutputï¼ˆISPCæ‰§è¡Œçš„åˆçº¦è°ƒç”¨ï¼‰==========
		for _, output := range tx.Outputs {
			if output == nil {
				continue
			}

			if stateOutput := output.GetState(); stateOutput != nil {
				// éªŒè¯StateOutputçš„ZKè¯æ˜å’Œæ‰§è¡Œç»“æœå“ˆå¸Œ
				if err := s.verifyStateOutput(ctx, stateOutput, i); err != nil {
					return fmt.Errorf("äº¤æ˜“ %d çš„StateOutputéªŒè¯å¤±è´¥: %w", i, err)
				}
			}
		}

		// ========== 2. å¤„ç†ResourceOutputï¼ˆèµ„æºäº¤æ˜“ï¼‰==========
		for _, output := range tx.Outputs {
			if output == nil {
				continue
			}

			if resourceOutput := output.GetResource(); resourceOutput != nil {
				// éªŒè¯èµ„æºç”Ÿå‘½å‘¨æœŸï¼ˆç‰ˆæœ¬å·ã€è¿‡æœŸæ—¶é—´ç­‰ï¼‰
				if err := s.verifyResourceLifecycle(ctx, block.Header.Timestamp, tx, resourceOutput, i); err != nil {
					return fmt.Errorf("äº¤æ˜“ %d çš„èµ„æºç”Ÿå‘½å‘¨æœŸéªŒè¯å¤±è´¥: %w", i, err)
				}
			}
		}

		// ========== 3. å¤„ç†AssetOutputï¼ˆæ™®é€šäº¤æ˜“ï¼‰==========
		// æ³¨æ„ï¼šæ™®é€šäº¤æ˜“çš„éªŒè¯å·²ç»åœ¨æäº¤æ—¶å®Œæˆï¼ˆé€šè¿‡TxVerifierï¼‰
		// è¿™é‡Œä¸»è¦æ˜¯æœ€ç»ˆç¡®è®¤ï¼Œç¡®ä¿äº¤æ˜“åœ¨åŒºå—ä¸­çš„æœ‰æ•ˆæ€§
		// UTXOå˜æ›´å·²ç»åœ¨DataWriterä¸­å¤„ç†ï¼Œè¿™é‡Œå¯èƒ½åªéœ€è¦è®°å½•æ—¥å¿—å’Œç»Ÿè®¡

		// ========== 4. å¤„ç†å¼•ç”¨å‹è¾“å…¥ ==========
		for _, input := range tx.Inputs {
			if input == nil {
				continue
			}

			if input.IsReferenceOnly {
				// éªŒè¯å¼•ç”¨çš„UTXOæ˜¯å¦å­˜åœ¨ä¸”æœ‰æ•ˆ
				if err := s.verifyReferenceUTXO(ctx, input.PreviousOutput, i); err != nil {
					return fmt.Errorf("äº¤æ˜“ %d çš„å¼•ç”¨UTXOéªŒè¯å¤±è´¥: %w", i, err)
				}
			} else {
				// æ¶ˆè´¹å‹è¾“å…¥ï¼šç¦æ­¢æ¶ˆè´¹â€œæœ¬å—å†…å·²è¢«å¼•ç”¨â€çš„ UTXOï¼ˆå¹¶å‘å¼•ç”¨è¯­ä¹‰ï¼‰
				if input.PreviousOutput != nil {
					if _, ok := referencedInBlock[outpointKey(input.PreviousOutput)]; ok {
						return fmt.Errorf("äº¤æ˜“ %d è¯•å›¾æ¶ˆè´¹ä¸€ä¸ªåœ¨åŒä¸€å—ä¸­è¢«å¼•ç”¨çš„UTXO: txId=%x outputIndex=%d",
							i,
							input.PreviousOutput.TxId[:minHelper(8, len(input.PreviousOutput.TxId))],
							input.PreviousOutput.OutputIndex,
						)
					}
				}
			}
		}

		// ========== 5. è®°å½•æ—¥å¿—å’Œç»Ÿè®¡ ==========
		if s.logger != nil {
			s.logger.Debugf("âœ… äº¤æ˜“ %d éªŒè¯å®Œæˆ (è¾“å…¥æ•°=%d, è¾“å‡ºæ•°=%d)",
				i, len(tx.Inputs), len(tx.Outputs))
		}
	}

	if s.logger != nil {
		s.logger.Debugf("âœ… æ‰€æœ‰äº¤æ˜“éªŒè¯å®Œæˆï¼Œæ€»è®¡: %d", len(block.Body.Transactions))
	}

	return nil
}

func outpointKey(o *transaction.OutPoint) string {
	if o == nil {
		return ""
	}
	// txid ç›´æ¥ä½œä¸º bytes æ‹¼æ¥ stringï¼ˆä¸ç”¨äºæŒä¹…åŒ–ï¼Œä»…ç”¨äºæœ¬æ¬¡éªŒè¯çš„ map keyï¼‰
	return string(o.TxId) + ":" + fmt.Sprintf("%d", o.OutputIndex)
}

// verifyStateOutput éªŒè¯StateOutputçš„ZKè¯æ˜å’Œæ‰§è¡Œç»“æœå“ˆå¸Œ
//
// ğŸ¯ **éªŒè¯å†…å®¹**ï¼š
// 1. éªŒè¯ZKè¯æ˜ï¼ˆå¿…é¡»ï¼‰
// 2. éªŒè¯æ‰§è¡Œç»“æœå“ˆå¸Œçš„ä¸€è‡´æ€§ï¼ˆå¯é€‰ï¼Œä½†æ¨èï¼‰
//
// å‚æ•°ï¼š
//   - ctx: ä¸Šä¸‹æ–‡
//   - stateOutput: StateOutputå¯¹è±¡
//   - txIndex: äº¤æ˜“ç´¢å¼•ï¼ˆç”¨äºé”™è¯¯ä¿¡æ¯ï¼‰
//
// è¿”å›ï¼š
//   - error: éªŒè¯é”™è¯¯
func (s *Service) verifyStateOutput(ctx context.Context, stateOutput *transaction.StateOutput, txIndex int) error {
	if stateOutput == nil {
		return fmt.Errorf("StateOutputä¸ºç©º")
	}

	// 1. éªŒè¯ZKè¯æ˜ï¼ˆå¿…é¡»ï¼‰
	if stateOutput.ZkProof == nil {
		return fmt.Errorf("StateOutputç¼ºå°‘ZKè¯æ˜")
	}

	// åœ¨ä»»ä½•ç¯å¢ƒä¸‹ï¼Œç¼ºå¤± zkProofService éƒ½è§†ä¸ºè‡´å‘½é”™è¯¯ï¼Œé˜²æ­¢åœ¨ç”Ÿäº§é“¾ä¸Šâ€œè£¸å¥”â€
	if s.zkProofService == nil {
		return fmt.Errorf("zkProofService æœªæ³¨å…¥ï¼Œæ— æ³•éªŒè¯ StateOutput çš„ ZK è¯æ˜ï¼ˆäº¤æ˜“ %dï¼‰", txIndex)
	}

	// éªŒè¯ZKè¯æ˜
	valid, err := s.zkProofService.VerifyStateProof(ctx, stateOutput.ZkProof)
	if err != nil {
		return fmt.Errorf("ZKè¯æ˜éªŒè¯è¿‡ç¨‹å‡ºé”™: %w", err)
	}
	if !valid {
		return fmt.Errorf("ZKè¯æ˜éªŒè¯å¤±è´¥")
	}

	if s.logger != nil {
		s.logger.Debugf("âœ… äº¤æ˜“ %d çš„ZKè¯æ˜éªŒè¯é€šè¿‡", txIndex)
	}

	// 2. âœ… å¼ºæ ¡éªŒï¼šExecutionResultHash å¿…é¡»ä¸ ZKProof.PublicInputs ä¸­çš„æŸä¸ª 32-byte è¾“å…¥ä¸€è‡´
	// è¯´æ˜ï¼š
	// - ä¸å‡è®¾ public_inputs çš„å›ºå®š indexï¼ˆé¿å…ä¸åŒç”µè·¯/ç‰ˆæœ¬ä¸å…¼å®¹ï¼‰
	// - åªè¦å­˜åœ¨ä¸€ä¸ª 32-byte public_input ä¸ execution_result_hash ç›¸åŒï¼Œå³è§†ä¸ºä¸€è‡´
	if len(stateOutput.ExecutionResultHash) > 0 {
		if len(stateOutput.ExecutionResultHash) != 32 {
			return fmt.Errorf("æ‰§è¡Œç»“æœå“ˆå¸Œé•¿åº¦é”™è¯¯: æœŸæœ›32å­—èŠ‚, å¾—åˆ°%då­—èŠ‚", len(stateOutput.ExecutionResultHash))
		}
		if stateOutput.ZkProof == nil {
			return fmt.Errorf("StateOutputç¼ºå°‘ZKè¯æ˜ï¼Œæ— æ³•æ ¡éªŒ execution_result_hash")
		}
		matched := false
		for _, pi := range stateOutput.ZkProof.PublicInputs {
			if len(pi) == 32 && string(pi) == string(stateOutput.ExecutionResultHash) {
				matched = true
				break
			}
		}
		if !matched {
			return fmt.Errorf("æ‰§è¡Œç»“æœå“ˆå¸Œä¸ZKå…¬å¼€è¾“å…¥ä¸ä¸€è‡´ï¼šexecution_result_hash æœªå‡ºç°åœ¨ public_inputs ä¸­ï¼ˆäº¤æ˜“ %dï¼‰", txIndex)
		}
		if s.logger != nil {
			s.logger.Debugf("âœ… äº¤æ˜“ %d çš„æ‰§è¡Œç»“æœå“ˆå¸Œä¸ZKå…¬å¼€è¾“å…¥ä¸€è‡´", txIndex)
		}
	}

	return nil
}

// verifyResourceLifecycle éªŒè¯ResourceOutputçš„èµ„æºç”Ÿå‘½å‘¨æœŸ
//
// ğŸ¯ **éªŒè¯å†…å®¹**ï¼š
// 1. éªŒè¯èµ„æºç‰ˆæœ¬å·
// 2. éªŒè¯èµ„æºè¿‡æœŸæ—¶é—´ï¼ˆå¦‚æœè®¾ç½®äº†TTLï¼‰
// 3. éªŒè¯èµ„æºåˆ›å»ºæ—¶é—´æˆ³
//
// å‚æ•°ï¼š
//   - ctx: ä¸Šä¸‹æ–‡
//   - resourceOutput: ResourceOutputå¯¹è±¡
//   - txIndex: äº¤æ˜“ç´¢å¼•ï¼ˆç”¨äºé”™è¯¯ä¿¡æ¯ï¼‰
//
// è¿”å›ï¼š
//   - error: éªŒè¯é”™è¯¯
func (s *Service) verifyResourceLifecycle(ctx context.Context, blockTimestamp uint64, tx *transaction.Transaction, resourceOutput *transaction.ResourceOutput, txIndex int) error {
	if resourceOutput == nil {
		return fmt.Errorf("ResourceOutputä¸ºç©º")
	}

	if resourceOutput.Resource == nil {
		return fmt.Errorf("ResourceOutputç¼ºå°‘Resourceå®šä¹‰")
	}

	// 1. âœ… ç‰ˆæœ¬è¯­ä¹‰ + ä¸¥æ ¼é€’å¢è§„åˆ™ï¼ˆéå‘åå…¼å®¹ï¼‰
	// - â€œæ–°èµ„æºâ€ï¼šä¸æ¶ˆè´¹ä»»ä½• ResourceUTXO â†’ version å¿…é¡»ä¸º 1
	// - â€œæ›´æ–°èµ„æºâ€ï¼šæ¶ˆè´¹ä¸”ä»…æ¶ˆè´¹ 1 ä¸ª ResourceUTXO â†’ version å¿…é¡»ä¸º prev_version + 1
	verStr := strings.TrimSpace(resourceOutput.Resource.Version)
	if verStr == "" {
		return fmt.Errorf("èµ„æº version ä¸èƒ½ä¸ºç©ºï¼ˆäº¤æ˜“ %dï¼‰", txIndex)
	}
	ver, err := strconv.ParseUint(verStr, 10, 64)
	if err != nil {
		return fmt.Errorf("èµ„æº version å¿…é¡»ä¸ºåè¿›åˆ¶æ•´æ•°ï¼ˆäº¤æ˜“ %dï¼‰: %w", txIndex, err)
	}
	if ver == 0 {
		return fmt.Errorf("èµ„æº version å¿…é¡» >= 1ï¼ˆäº¤æ˜“ %dï¼‰", txIndex)
	}

	if s.utxoQuery == nil {
		return fmt.Errorf("utxoQuery æœªæ³¨å…¥ï¼Œæ— æ³•æ ¡éªŒèµ„æºç‰ˆæœ¬è§„åˆ™ï¼ˆäº¤æ˜“ %dï¼‰", txIndex)
	}
	if tx == nil {
		return fmt.Errorf("äº¤æ˜“ä¸ºç©ºï¼Œæ— æ³•æ ¡éªŒèµ„æºç‰ˆæœ¬è§„åˆ™ï¼ˆäº¤æ˜“ %dï¼‰", txIndex)
	}

	var prevResUTXO *utxopb.UTXO
	var consumedResCount int
	for _, in := range tx.Inputs {
		if in == nil || in.PreviousOutput == nil || in.IsReferenceOnly {
			continue
		}
		u, err := s.utxoQuery.GetUTXO(ctx, in.PreviousOutput)
		if err != nil || u == nil {
			return fmt.Errorf("è·å–è¾“å…¥UTXOå¤±è´¥ï¼ˆèµ„æºç‰ˆæœ¬è§„åˆ™ï¼‰: %w", err)
		}
		if u.GetCategory() == utxopb.UTXOCategory_UTXO_CATEGORY_RESOURCE {
			consumedResCount++
			prevResUTXO = u
		}
	}

	if consumedResCount == 0 {
		if ver != 1 {
			return fmt.Errorf("æ–°èµ„æºçš„ version å¿…é¡»ä¸º 1ï¼Œä½†å¾—åˆ° %dï¼ˆäº¤æ˜“ %dï¼‰", ver, txIndex)
		}
	} else if consumedResCount == 1 {
		// ä»è¢«æ¶ˆè´¹çš„ ResourceUTXO ä¸­æå–æ—§ç‰ˆæœ¬å·ï¼ˆå¿…é¡»æ˜¯ cached_output çš„ ResourceOutputï¼‰
		cached := prevResUTXO.GetCachedOutput()
		if cached == nil || cached.GetResource() == nil || cached.GetResource().Resource == nil {
			return fmt.Errorf("è¢«æ¶ˆè´¹çš„ ResourceUTXO ç¼ºå°‘ cached_output.resourceï¼Œæ— æ³•æ ¡éªŒç‰ˆæœ¬é€’å¢ï¼ˆäº¤æ˜“ %dï¼‰", txIndex)
		}
		prevVerStr := strings.TrimSpace(cached.GetResource().Resource.Version)
		prevVer, err := strconv.ParseUint(prevVerStr, 10, 64)
		if err != nil {
			return fmt.Errorf("æ—§èµ„æº version éæ³•ï¼ˆå¿…é¡»ä¸ºåè¿›åˆ¶æ•´æ•°ï¼‰: %w", err)
		}
		if ver != prevVer+1 {
			return fmt.Errorf("èµ„æº version å¿…é¡»ä¸¥æ ¼é€’å¢ï¼šprev=%d current=%dï¼ˆäº¤æ˜“ %dï¼‰", prevVer, ver, txIndex)
		}
	} else {
		return fmt.Errorf("èµ„æºæ›´æ–°äº¤æ˜“ä¸å…è®¸åŒæ—¶æ¶ˆè´¹å¤šä¸ª ResourceUTXOï¼ˆcount=%dï¼Œäº¤æ˜“ %dï¼‰", consumedResCount, txIndex)
	}

	// 2. éªŒè¯èµ„æºåˆ›å»ºæ—¶é—´æˆ³
	if resourceOutput.CreationTimestamp > 0 {
		// âœ… å…±è¯†ä¸€è‡´æ€§ï¼šä½¿ç”¨ blockTimestamp æ ¡éªŒï¼Œä¸ä½¿ç”¨ wall-clock
		if blockTimestamp > 0 && resourceOutput.CreationTimestamp > blockTimestamp {
			return fmt.Errorf("èµ„æºåˆ›å»ºæ—¶é—´æˆ³æ— æ•ˆ: creation=%d æ™šäº block_time=%dï¼ˆäº¤æ˜“ %dï¼‰",
				resourceOutput.CreationTimestamp, blockTimestamp, txIndex)
		}
	}

	// 3. âœ… èµ„æº TTL/è¿‡æœŸéªŒè¯ï¼ˆç¡®å®šæ€§æ¥æºï¼šResource.custom_attributesï¼‰
	// å…¼å®¹æ¥æºï¼ˆæŒ‰ä¼˜å…ˆçº§ï¼‰ï¼š
	// - custom_attributes["expires_at"] / ["expires_at_timestamp"]ï¼šç»å¯¹è¿‡æœŸæ—¶é—´æˆ³ï¼ˆç§’ï¼‰
	// - custom_attributes["ttl_seconds"]ï¼šç›¸å¯¹TTLï¼ˆç§’ï¼‰ï¼ŒåŸºäº creation_timestamp è®¡ç®—
	attrs := resourceOutput.Resource.CustomAttributes
	var expiresAt uint64
	if attrs != nil {
		if v := strings.TrimSpace(attrs["expires_at_timestamp"]); v != "" {
			if ts, err := strconv.ParseUint(v, 10, 64); err == nil {
				expiresAt = ts
			} else {
				return fmt.Errorf("èµ„æº expires_at_timestamp éæ³•ï¼ˆäº¤æ˜“ %dï¼‰: %w", txIndex, err)
			}
		} else if v := strings.TrimSpace(attrs["expires_at"]); v != "" {
			if ts, err := strconv.ParseUint(v, 10, 64); err == nil {
				expiresAt = ts
			} else {
				return fmt.Errorf("èµ„æº expires_at éæ³•ï¼ˆäº¤æ˜“ %dï¼‰: %w", txIndex, err)
			}
		} else if v := strings.TrimSpace(attrs["ttl_seconds"]); v != "" {
			ttl, err := strconv.ParseUint(v, 10, 64)
			if err != nil {
				return fmt.Errorf("èµ„æº ttl_seconds éæ³•ï¼ˆäº¤æ˜“ %dï¼‰: %w", txIndex, err)
			}
			var base uint64
			if resourceOutput.CreationTimestamp > 0 {
				base = resourceOutput.CreationTimestamp
			} else if resourceOutput.Resource.CreatedTimestamp > 0 {
				base = resourceOutput.Resource.CreatedTimestamp
			}
			if base > 0 && ttl > 0 {
				expiresAt = base + ttl
			}
		}
	}
	if expiresAt > 0 && blockTimestamp > 0 && blockTimestamp >= expiresAt {
		return fmt.Errorf("èµ„æºå·²è¿‡æœŸ: block_time=%d expires_at=%dï¼ˆäº¤æ˜“ %dï¼‰", blockTimestamp, expiresAt, txIndex)
	}

	if s.logger != nil {
		s.logger.Debugf("âœ… äº¤æ˜“ %d çš„èµ„æºç”Ÿå‘½å‘¨æœŸéªŒè¯é€šè¿‡", txIndex)
	}

	return nil
}

// verifyReferenceUTXO éªŒè¯å¼•ç”¨å‹è¾“å…¥çš„æœ‰æ•ˆæ€§
//
// ğŸ¯ **éªŒè¯å†…å®¹**ï¼š
// 1. éªŒè¯å¼•ç”¨çš„UTXOæ˜¯å¦å­˜åœ¨
// 2. éªŒè¯å¼•ç”¨çš„UTXOæ˜¯å¦æœ‰æ•ˆï¼ˆæœªè¢«æ¶ˆè´¹ï¼‰
// 3. éªŒè¯å¼•ç”¨çš„UTXOç±»å‹æ˜¯å¦å…è®¸å¼•ç”¨
//
// å‚æ•°ï¼š
//   - ctx: ä¸Šä¸‹æ–‡
//   - previousOutput: å¼•ç”¨çš„UTXOè¾“å‡ºç‚¹
//   - txIndex: äº¤æ˜“ç´¢å¼•ï¼ˆç”¨äºé”™è¯¯ä¿¡æ¯ï¼‰
//
// è¿”å›ï¼š
//   - error: éªŒè¯é”™è¯¯
func (s *Service) verifyReferenceUTXO(ctx context.Context, previousOutput *transaction.OutPoint, txIndex int) error {
	if previousOutput == nil {
		return fmt.Errorf("å¼•ç”¨UTXOçš„è¾“å‡ºç‚¹ä¸ºç©º")
	}

	// 1. éªŒè¯è¾“å‡ºç‚¹åŸºæœ¬å­—æ®µ
	if len(previousOutput.TxId) == 0 {
		return fmt.Errorf("å¼•ç”¨UTXOçš„äº¤æ˜“IDä¸ºç©º")
	}

	// 2. éªŒè¯å¼•ç”¨çš„UTXOæ˜¯å¦å­˜åœ¨
	// æ³¨æ„ï¼šè¿™é‡Œéœ€è¦æŸ¥è¯¢UTXOé›†åˆï¼Œæ£€æŸ¥UTXOæ˜¯å¦å­˜åœ¨
	// ç”±äºUTXOå˜æ›´å·²ç»åœ¨DataWriterä¸­å¤„ç†ï¼Œè¿™é‡Œåº”è¯¥æŸ¥è¯¢æœ€æ–°çš„UTXOçŠ¶æ€
	if s.utxoQuery == nil {
		return fmt.Errorf("utxoQuery æœªæ³¨å…¥ï¼Œæ— æ³•éªŒè¯å¼•ç”¨UTXOå­˜åœ¨æ€§ï¼ˆäº¤æ˜“ %dï¼‰", txIndex)
	}

	// æŸ¥è¯¢UTXOæ˜¯å¦å­˜åœ¨
	utxo, err := s.utxoQuery.GetUTXO(ctx, previousOutput)
	if err != nil {
		return fmt.Errorf("æŸ¥è¯¢å¼•ç”¨UTXOå¤±è´¥: %w", err)
	}
	if utxo == nil {
		return fmt.Errorf("å¼•ç”¨çš„UTXOä¸å­˜åœ¨: txHash=%x, outputIndex=%d",
			previousOutput.TxId, previousOutput.OutputIndex)
	}

	// 3. âœ… å¼ºæ ¡éªŒï¼šä»… ResourceUTXO å…è®¸è¢«å¼•ç”¨ï¼ˆEUTXO ä¸¤ç±»è¾“å…¥è¯­ä¹‰ï¼‰
	if utxo.GetCategory() != utxopb.UTXOCategory_UTXO_CATEGORY_RESOURCE {
		return fmt.Errorf("å¼•ç”¨å‹è¾“å…¥åªå…è®¸å¼•ç”¨ ResourceUTXOï¼Œä½†å¾—åˆ°: category=%s txId=%x outputIndex=%d",
			utxo.GetCategory().String(),
			previousOutput.TxId[:minHelper(8, len(previousOutput.TxId))],
			previousOutput.OutputIndex,
		)
	}

	// 4. ç”Ÿå‘½å‘¨æœŸçŠ¶æ€æ£€æŸ¥ï¼šResourceUTXO åœ¨ AVAILABLE/REFERENCED ä¸‹å¯è¢«å¼•ç”¨
	switch utxo.GetStatus() {
	case utxopb.UTXOLifecycleStatus_UTXO_LIFECYCLE_AVAILABLE,
		utxopb.UTXOLifecycleStatus_UTXO_LIFECYCLE_REFERENCED:
		// ok
	default:
		return fmt.Errorf("å¼•ç”¨å‹è¾“å…¥å¼•ç”¨äº†éå¯ç”¨/éå¼•ç”¨æ€çš„ ResourceUTXO: status=%s txId=%x outputIndex=%d",
			utxo.GetStatus().String(),
			previousOutput.TxId[:minHelper(8, len(previousOutput.TxId))],
			previousOutput.OutputIndex,
		)
	}

	// 5. å¹¶å‘å¼•ç”¨ä¸Šé™æ£€æŸ¥ï¼ˆè‹¥è®¾ç½®ï¼‰
	if rc := utxo.GetResourceConstraints(); rc != nil {
		max := rc.GetMaxConcurrentReferences()
		if max > 0 && rc.GetReferenceCount() >= max {
			return fmt.Errorf("ResourceUTXO å¹¶å‘å¼•ç”¨è¶…é™: ref_count=%d max=%d txId=%x outputIndex=%d",
				rc.GetReferenceCount(),
				max,
				previousOutput.TxId[:minHelper(8, len(previousOutput.TxId))],
				previousOutput.OutputIndex,
			)
		}
	}

	if s.logger != nil {
		s.logger.Debugf("âœ… äº¤æ˜“ %d çš„å¼•ç”¨UTXOéªŒè¯é€šè¿‡: category=RESOURCE status=%s txId=%x outputIndex=%d",
			txIndex,
			utxo.GetStatus().String(),
			previousOutput.TxId[:minHelper(8, len(previousOutput.TxId))],
			previousOutput.OutputIndex,
		)
	}

	return nil
}
