// Package testutil æä¾› EUTXO æ¨¡å—æµ‹è¯•çš„è¾…åŠ©å·¥å…·
//
// ğŸ§ª **æµ‹è¯•æ•°æ® Fixtures**
//
// æœ¬æ–‡ä»¶æä¾›æµ‹è¯•æ•°æ®çš„åˆ›å»ºå‡½æ•°ï¼Œç”¨äºç®€åŒ–æµ‹è¯•ä»£ç ç¼–å†™ã€‚
// éµå¾ª docs/system/standards/principles/testing-standards.md è§„èŒƒã€‚
package testutil

import (
	"crypto/rand"
	"fmt"

	transaction "github.com/weisyn/v1/pb/blockchain/block/transaction"
	"github.com/weisyn/v1/pb/blockchain/utxo"
	"github.com/weisyn/v1/pkg/types"
)

// ==================== æµ‹è¯•æ•°æ®åˆ›å»ºå‡½æ•° ====================

// RandomBytes ç”ŸæˆæŒ‡å®šé•¿åº¦çš„éšæœºå­—èŠ‚
func RandomBytes(length int) []byte {
	data := make([]byte, length)
	_, _ = rand.Read(data)
	return data
}

// RandomTxID ç”Ÿæˆéšæœºäº¤æ˜“IDï¼ˆ32å­—èŠ‚ï¼‰
func RandomTxID() []byte {
	return RandomBytes(32)
}

// RandomAddress ç”Ÿæˆéšæœºåœ°å€ï¼ˆ20å­—èŠ‚ï¼‰
func RandomAddress() []byte {
	return RandomBytes(20)
}

// CreateOutPoint åˆ›å»ºæµ‹è¯•ç”¨çš„ OutPoint
func CreateOutPoint(txID []byte, index uint32) *transaction.OutPoint {
	if txID == nil {
		txID = RandomTxID()
	}
	return &transaction.OutPoint{
		TxId:        txID,
		OutputIndex: index,
	}
}

// CreateUTXO åˆ›å»ºæµ‹è¯•ç”¨çš„ UTXO
//
// å‚æ•°ï¼š
//   - outpoint: UTXO çš„è¾“å‡ºç‚¹ï¼ˆnil æ—¶è‡ªåŠ¨ç”Ÿæˆï¼‰
//   - ownerAddress: æ‰€æœ‰è€…åœ°å€ï¼ˆnil æ—¶è‡ªåŠ¨ç”Ÿæˆï¼‰
//   - category: UTXO ç±»åˆ«ï¼ˆnil æ—¶ä½¿ç”¨ ASSETï¼‰
//
// è¿”å›ï¼š
//   - *utxo.UTXO: UTXO å¯¹è±¡
func CreateUTXO(outpoint *transaction.OutPoint, ownerAddress []byte, category *utxo.UTXOCategory) *utxo.UTXO {
	if outpoint == nil {
		outpoint = CreateOutPoint(nil, 0)
	}
	if ownerAddress == nil {
		ownerAddress = RandomAddress()
	}
	if category == nil {
		cat := utxo.UTXOCategory_UTXO_CATEGORY_ASSET
		category = &cat
	}

	utxoObj := &utxo.UTXO{
		Outpoint:     outpoint,
		OwnerAddress: ownerAddress,
		Category:     *category,
		Status:       utxo.UTXOLifecycleStatus_UTXO_LIFECYCLE_AVAILABLE,
		BlockHeight:  1, // é»˜è®¤é«˜åº¦ä¸º1
	}

	// æ ¹æ®ç±»åˆ«è®¾ç½®å¯¹åº”çš„çº¦æŸï¼ˆç®€åŒ–å®ç°ï¼Œä¸è®¾ç½® CachedOutputï¼‰
	switch *category {
	case utxo.UTXOCategory_UTXO_CATEGORY_ASSET:
		utxoObj.TypeSpecificConstraints = &utxo.UTXO_AssetConstraints{
			AssetConstraints: &utxo.AssetUTXOConstraints{},
		}
	case utxo.UTXOCategory_UTXO_CATEGORY_RESOURCE:
		utxoObj.TypeSpecificConstraints = &utxo.UTXO_ResourceConstraints{
			ResourceConstraints: &utxo.ResourceUTXOConstraints{
				ReferenceCount: 0,
			},
		}
	case utxo.UTXOCategory_UTXO_CATEGORY_STATE:
		utxoObj.TypeSpecificConstraints = &utxo.UTXO_StateConstraints{
			StateConstraints: &utxo.StateUTXOConstraints{},
		}
	}

	return utxoObj
}

// CreateAssetUTXO åˆ›å»ºèµ„äº§ UTXO
func CreateAssetUTXO(outpoint *transaction.OutPoint, ownerAddress []byte, amount uint64) *utxo.UTXO {
	cat := utxo.UTXOCategory_UTXO_CATEGORY_ASSET
	return CreateUTXO(outpoint, ownerAddress, &cat)
}

// CreateResourceUTXO åˆ›å»ºèµ„æº UTXO
func CreateResourceUTXO(outpoint *transaction.OutPoint, ownerAddress []byte, resourceID []byte) *utxo.UTXO {
	cat := utxo.UTXOCategory_UTXO_CATEGORY_RESOURCE
	return CreateUTXO(outpoint, ownerAddress, &cat)
}

// CreateStateUTXO åˆ›å»ºçŠ¶æ€ UTXO
func CreateStateUTXO(outpoint *transaction.OutPoint, ownerAddress []byte, stateData []byte) *utxo.UTXO {
	cat := utxo.UTXOCategory_UTXO_CATEGORY_STATE
	return CreateUTXO(outpoint, ownerAddress, &cat)
}

// CreateUTXOSnapshotData åˆ›å»ºæµ‹è¯•ç”¨çš„å¿«ç…§æ•°æ®
func CreateUTXOSnapshotData(snapshotID string, height uint64, stateRoot []byte) *types.UTXOSnapshotData {
	if snapshotID == "" {
		snapshotID = fmt.Sprintf("snapshot-%d", height)
	}
	if stateRoot == nil {
		stateRoot = RandomBytes(32)
	}
	return &types.UTXOSnapshotData{
		SnapshotID: snapshotID,
		Height:     height,
		StateRoot:  stateRoot,
	}
}

