package hostabi

import (
	"context"
	"fmt"
	"testing"

	"github.com/stretchr/testify/assert"

	"github.com/weisyn/v1/internal/core/ispc/testutil"
	utxo "github.com/weisyn/v1/pb/blockchain/utxo"
	pb "github.com/weisyn/v1/pb/blockchain/block/transaction"
)

// ============================================================================
// BatchUTXOQuerier æµ‹è¯•
// ============================================================================
//
// ğŸ¯ **æµ‹è¯•ç›®çš„**ï¼šå‘ç° BatchUTXOQuerier çš„ç¼ºé™·å’ŒBUG
//
// ============================================================================

// TestNewBatchUTXOQuerier æµ‹è¯•åˆ›å»ºæ‰¹é‡UTXOæŸ¥è¯¢å™¨
func TestNewBatchUTXOQuerier(t *testing.T) {
	logger := testutil.NewTestLogger()
	mockUTXOQuery := &mockUTXOQueryForBatch{}

	querier := NewBatchUTXOQuerier(mockUTXOQuery, logger)

	assert.NotNil(t, querier, "åº”è¯¥æˆåŠŸåˆ›å»ºæŸ¥è¯¢å™¨")
	assert.Equal(t, mockUTXOQuery, querier.eutxoQuery, "åº”è¯¥è®¾ç½®UTXOæŸ¥è¯¢æœåŠ¡")
	assert.Equal(t, logger, querier.logger, "åº”è¯¥è®¾ç½®æ—¥å¿—å™¨")
}

// TestBatchUTXOQuerier_BatchQueryUTXOs_Empty æµ‹è¯•ç©ºoutpointåˆ—è¡¨
func TestBatchUTXOQuerier_BatchQueryUTXOs_Empty(t *testing.T) {
	logger := testutil.NewTestLogger()
	mockUTXOQuery := &mockUTXOQueryForBatch{}
	querier := NewBatchUTXOQuerier(mockUTXOQuery, logger)

	ctx := context.Background()
	result, err := querier.BatchQueryUTXOs(ctx, []*pb.OutPoint{})

	assert.NoError(t, err, "åº”è¯¥æˆåŠŸ")
	assert.NotNil(t, result, "åº”è¯¥è¿”å›ç»“æœ")
	assert.Empty(t, result.UTXOs, "UTXOæ˜ å°„åº”è¯¥ä¸ºç©º")
	assert.Empty(t, result.Errors, "é”™è¯¯æ˜ å°„åº”è¯¥ä¸ºç©º")
}

// TestBatchUTXOQuerier_BatchQueryUTXOs_Success æµ‹è¯•æˆåŠŸæ‰¹é‡æŸ¥è¯¢UTXO
func TestBatchUTXOQuerier_BatchQueryUTXOs_Success(t *testing.T) {
	logger := testutil.NewTestLogger()
	txID := make([]byte, 32)
	mockUTXOQuery := &mockUTXOQueryForBatch{
		utxos: map[string]*utxo.UTXO{
			generateOutpointKey(txID, 0): {
				ContentStrategy: &utxo.UTXO_CachedOutput{
					CachedOutput: &pb.TxOutput{
						Owner: make([]byte, 20),
						OutputContent: &pb.TxOutput_Asset{
							Asset: &pb.AssetOutput{
								AssetContent: &pb.AssetOutput_NativeCoin{
									NativeCoin: &pb.NativeCoinAsset{
										Amount: "100",
									},
								},
							},
						},
					},
				},
			},
		},
	}
	querier := NewBatchUTXOQuerier(mockUTXOQuery, logger)

	ctx := context.Background()
	outpoints := []*pb.OutPoint{
		{TxId: txID, OutputIndex: 0},
	}

	result, err := querier.BatchQueryUTXOs(ctx, outpoints)

	assert.NoError(t, err, "åº”è¯¥æˆåŠŸ")
	assert.NotNil(t, result, "åº”è¯¥è¿”å›ç»“æœ")
	assert.Len(t, result.UTXOs, 1, "åº”è¯¥è¿”å›1ä¸ªUTXO")
	assert.Empty(t, result.Errors, "é”™è¯¯æ˜ å°„åº”è¯¥ä¸ºç©º")
}

// TestBatchUTXOQuerier_BatchQueryUTXOs_NotFound æµ‹è¯•UTXOä¸å­˜åœ¨
func TestBatchUTXOQuerier_BatchQueryUTXOs_NotFound(t *testing.T) {
	logger := testutil.NewTestLogger()
	mockUTXOQuery := &mockUTXOQueryForBatch{
		err: assert.AnError,
	}
	querier := NewBatchUTXOQuerier(mockUTXOQuery, logger)

	ctx := context.Background()
	outpoints := []*pb.OutPoint{
		{TxId: make([]byte, 32), OutputIndex: 0},
	}

	result, err := querier.BatchQueryUTXOs(ctx, outpoints)

	assert.Error(t, err, "åº”è¯¥è¿”å›é”™è¯¯ï¼ˆæ‰€æœ‰æŸ¥è¯¢éƒ½å¤±è´¥ï¼‰")
	assert.NotNil(t, result, "åº”è¯¥è¿”å›ç»“æœ")
	assert.Empty(t, result.UTXOs, "UTXOæ˜ å°„åº”è¯¥ä¸ºç©º")
	assert.Len(t, result.Errors, 1, "é”™è¯¯æ˜ å°„åº”è¯¥æœ‰1ä¸ªé”™è¯¯")
	assert.Contains(t, err.Error(), "æ‰¹é‡UTXOæŸ¥è¯¢å…¨éƒ¨å¤±è´¥", "é”™è¯¯ä¿¡æ¯åº”è¯¥æ­£ç¡®")
}

// TestBatchUTXOQuerier_BatchQueryUTXOs_NilOutpoint æµ‹è¯•nil outpoint
func TestBatchUTXOQuerier_BatchQueryUTXOs_NilOutpoint(t *testing.T) {
	logger := testutil.NewTestLogger()
	txID := make([]byte, 32)
	mockUTXOQuery := &mockUTXOQueryForBatch{
		utxos: map[string]*utxo.UTXO{
			generateOutpointKey(txID, 0): {
				ContentStrategy: &utxo.UTXO_CachedOutput{
					CachedOutput: &pb.TxOutput{},
				},
			},
		},
	}
	querier := NewBatchUTXOQuerier(mockUTXOQuery, logger)

	ctx := context.Background()
	outpoints := []*pb.OutPoint{
		nil, // nil outpointè¢«è·³è¿‡
		{TxId: txID, OutputIndex: 0}, // å­˜åœ¨çš„UTXO
	}

	result, err := querier.BatchQueryUTXOs(ctx, outpoints)

	assert.NoError(t, err, "åº”è¯¥æˆåŠŸï¼ˆnil outpointè¢«è·³è¿‡ï¼Œç¬¬äºŒä¸ªUTXOå­˜åœ¨ï¼‰")
	assert.NotNil(t, result, "åº”è¯¥è¿”å›ç»“æœ")
	assert.Len(t, result.UTXOs, 1, "åº”è¯¥è¿”å›1ä¸ªUTXOï¼ˆnil outpointè¢«è·³è¿‡ï¼‰")
	assert.Empty(t, result.Errors, "é”™è¯¯æ˜ å°„åº”è¯¥ä¸ºç©º")
}

// TestBatchUTXOQuerier_BatchQueryUTXOs_NoCachedOutput æµ‹è¯•UTXOå­˜åœ¨ä½†æ²¡æœ‰ç¼“å­˜çš„è¾“å‡º
func TestBatchUTXOQuerier_BatchQueryUTXOs_NoCachedOutput(t *testing.T) {
	logger := testutil.NewTestLogger()
	txID := make([]byte, 32)
	mockUTXOQuery := &mockUTXOQueryForBatch{
		utxos: map[string]*utxo.UTXO{
			generateOutpointKey(txID, 0): {
				ContentStrategy: &utxo.UTXO_ReferenceOnly{
					ReferenceOnly: true,
				},
			},
		},
	}
	querier := NewBatchUTXOQuerier(mockUTXOQuery, logger)

	ctx := context.Background()
	outpoints := []*pb.OutPoint{
		{TxId: txID, OutputIndex: 0},
	}

	result, err := querier.BatchQueryUTXOs(ctx, outpoints)

	// å½“UTXOå­˜åœ¨ä½†æ²¡æœ‰ç¼“å­˜çš„è¾“å‡ºæ—¶ï¼Œä¼šè®°å½•é”™è¯¯
	// å¦‚æœæ‰€æœ‰æŸ¥è¯¢éƒ½å¤±è´¥ï¼ˆåŒ…æ‹¬è¿™ç§æƒ…å†µï¼‰ï¼Œä¼šè¿”å›æ€»ä½“é”™è¯¯
	assert.Error(t, err, "åº”è¯¥è¿”å›é”™è¯¯ï¼ˆæ‰€æœ‰æŸ¥è¯¢éƒ½å¤±è´¥ï¼‰")
	assert.NotNil(t, result, "åº”è¯¥è¿”å›ç»“æœ")
	assert.Empty(t, result.UTXOs, "UTXOæ˜ å°„åº”è¯¥ä¸ºç©ºï¼ˆæ²¡æœ‰ç¼“å­˜çš„è¾“å‡ºï¼‰")
	assert.Len(t, result.Errors, 1, "é”™è¯¯æ˜ å°„åº”è¯¥æœ‰1ä¸ªé”™è¯¯")
	outpointKey := generateOutpointKey(txID, 0)
	assert.Contains(t, result.Errors[outpointKey].Error(), "UTXOå­˜åœ¨ä½†æ— æ³•è·å–è¾“å‡º", "é”™è¯¯ä¿¡æ¯åº”è¯¥æ­£ç¡®")
}

// TestBatchUTXOQuerier_BatchQueryUTXOExists_Empty æµ‹è¯•ç©ºoutpointåˆ—è¡¨
func TestBatchUTXOQuerier_BatchQueryUTXOExists_Empty(t *testing.T) {
	logger := testutil.NewTestLogger()
	mockUTXOQuery := &mockUTXOQueryForBatch{}
	querier := NewBatchUTXOQuerier(mockUTXOQuery, logger)

	ctx := context.Background()
	result, err := querier.BatchQueryUTXOExists(ctx, []*pb.OutPoint{})

	assert.NoError(t, err, "åº”è¯¥æˆåŠŸ")
	assert.NotNil(t, result, "åº”è¯¥è¿”å›ç»“æœ")
	assert.Empty(t, result, "ç»“æœæ˜ å°„åº”è¯¥ä¸ºç©º")
}

// TestBatchUTXOQuerier_BatchQueryUTXOExists_Success æµ‹è¯•æˆåŠŸæ‰¹é‡æŸ¥è¯¢UTXOå­˜åœ¨æ€§
func TestBatchUTXOQuerier_BatchQueryUTXOExists_Success(t *testing.T) {
	logger := testutil.NewTestLogger()
	txID1 := make([]byte, 32)
	txID2 := make([]byte, 32)
	txID2[0] = 1 // ç¡®ä¿txID2ä¸åŒ
	mockUTXOQuery := &mockUTXOQueryForBatch{
		utxos: map[string]*utxo.UTXO{
			generateOutpointKey(txID1, 0): {
				ContentStrategy: &utxo.UTXO_CachedOutput{
					CachedOutput: &pb.TxOutput{},
				},
			},
		},
	}
	querier := NewBatchUTXOQuerier(mockUTXOQuery, logger)

	ctx := context.Background()
	outpoints := []*pb.OutPoint{
		{TxId: txID1, OutputIndex: 0},
		{TxId: txID2, OutputIndex: 1}, // ä¸å­˜åœ¨çš„UTXO
	}

	result, err := querier.BatchQueryUTXOExists(ctx, outpoints)

	assert.NoError(t, err, "åº”è¯¥æˆåŠŸ")
	assert.NotNil(t, result, "åº”è¯¥è¿”å›ç»“æœ")
	assert.Len(t, result, 2, "ç»“æœæ˜ å°„åº”è¯¥æœ‰2ä¸ªæ¡ç›®")
	assert.True(t, result[generateOutpointKey(txID1, 0)], "ç¬¬ä¸€ä¸ªUTXOåº”è¯¥å­˜åœ¨")
	assert.False(t, result[generateOutpointKey(txID2, 1)], "ç¬¬äºŒä¸ªUTXOåº”è¯¥ä¸å­˜åœ¨")
}

// TestBatchUTXOQuerier_BatchQueryUTXOExists_NilOutpoint æµ‹è¯•nil outpoint
func TestBatchUTXOQuerier_BatchQueryUTXOExists_NilOutpoint(t *testing.T) {
	logger := testutil.NewTestLogger()
	mockUTXOQuery := &mockUTXOQueryForBatch{}
	querier := NewBatchUTXOQuerier(mockUTXOQuery, logger)

	ctx := context.Background()
	outpoints := []*pb.OutPoint{
		nil,
		{TxId: make([]byte, 32), OutputIndex: 0},
	}

	result, err := querier.BatchQueryUTXOExists(ctx, outpoints)

	assert.NoError(t, err, "åº”è¯¥æˆåŠŸï¼ˆnil outpointè¢«è·³è¿‡ï¼‰")
	assert.NotNil(t, result, "åº”è¯¥è¿”å›ç»“æœ")
	// nil outpointè¢«è·³è¿‡ï¼Œæ‰€ä»¥ç»“æœæ˜ å°„å¯èƒ½åªæœ‰1ä¸ªæ¡ç›®
}

// ============================================================================
// Mockå¯¹è±¡å®šä¹‰
// ============================================================================

// mockUTXOQueryForBatch Mockçš„UTXOæŸ¥è¯¢æœåŠ¡ï¼ˆç”¨äºæ‰¹é‡æŸ¥è¯¢æµ‹è¯•ï¼‰
type mockUTXOQueryForBatch struct {
	utxos map[string]*utxo.UTXO
	err   error
}

func (m *mockUTXOQueryForBatch) GetUTXO(ctx context.Context, outpoint *pb.OutPoint) (*utxo.UTXO, error) {
	if m.err != nil {
		return nil, m.err
	}
	if m.utxos == nil {
		return nil, assert.AnError
	}
	key := outpointKey(outpoint)
	if utxo, ok := m.utxos[key]; ok {
		return utxo, nil
	}
	return nil, assert.AnError
}

func (m *mockUTXOQueryForBatch) GetUTXOsByAddress(ctx context.Context, address []byte, category *utxo.UTXOCategory, onlyAvailable bool) ([]*utxo.UTXO, error) {
	return nil, nil
}
func (m *mockUTXOQueryForBatch) GetSponsorPoolUTXOs(ctx context.Context, onlyAvailable bool) ([]*utxo.UTXO, error) {
	return nil, nil
}
func (m *mockUTXOQueryForBatch) GetCurrentStateRoot(ctx context.Context) ([]byte, error) {
	return nil, nil
}

// outpointKey ç”Ÿæˆoutpointçš„å­—ç¬¦ä¸²é”®
func outpointKey(outpoint *pb.OutPoint) string {
	if outpoint == nil {
		return ""
	}
	return generateOutpointKey(outpoint.TxId, outpoint.OutputIndex)
}

// generateOutpointKey ç”Ÿæˆoutpointçš„å­—ç¬¦ä¸²é”®ï¼ˆç”¨äºæµ‹è¯•ï¼‰
func generateOutpointKey(txID []byte, index uint32) string {
	return fmt.Sprintf("%x:%d", txID, index)
}

