// Package writer å®ç° UTXO å˜æ›´å†™å…¥é€»è¾‘
//
// ğŸ’° **UTXO å˜æ›´å†™å…¥ (UTXO Changes Writing)**
//
// æœ¬æ–‡ä»¶å®ç° UTXO å˜æ›´çš„å†™å…¥é€»è¾‘ï¼Œå¤„ç†äº¤æ˜“è¾“å…¥å’Œè¾“å‡ºã€‚
//
// ğŸ¯ **æ ¸å¿ƒèŒè´£**ï¼š
// - å¤„ç†äº¤æ˜“è¾“å…¥ï¼ˆåˆ é™¤ UTXOï¼Œè®°å½•èŠ±è´¹å†å²ï¼‰
// - å¤„ç†äº¤æ˜“è¾“å‡ºï¼ˆåˆ›å»º UTXOï¼Œæ›´æ–°åœ°å€ç´¢å¼•ï¼‰
// - æ›´æ–° Nonce ç´¢å¼•
//
// âš ï¸ **å…³é”®åŸåˆ™**ï¼š
// - UTXO ä»äº¤æ˜“ä¸­æå–
// - å¤„ç†è¾“å…¥æ—¶åˆ é™¤ UTXOï¼Œè®°å½•èŠ±è´¹å†å²
// - å¤„ç†è¾“å‡ºæ—¶åˆ›å»º UTXOï¼Œæ›´æ–°åœ°å€ç´¢å¼•
// - âœ… **æ¶æ„ä¿®å¤**ï¼šç›´æ¥æ“ä½œå­˜å‚¨ï¼Œä¸ä¾èµ–ä¸šåŠ¡å±‚ç»„ä»¶ï¼ˆeutxo.UTXOWriterï¼‰
package writer

import (
	"context"
	"encoding/binary"
	"encoding/json"
	"fmt"

	core "github.com/weisyn/v1/pb/blockchain/block"
	transaction "github.com/weisyn/v1/pb/blockchain/block/transaction"
	utxo "github.com/weisyn/v1/pb/blockchain/utxo"
	eutxoiface "github.com/weisyn/v1/pkg/interfaces/eutxo"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/storage"
	"google.golang.org/protobuf/proto"
)

// writeUTXOChanges å¤„ç† UTXO å˜æ›´
//
// ğŸ¯ **æ ¸å¿ƒèŒè´£**ï¼š
// ä»åŒºå—çš„äº¤æ˜“ä¸­æå– UTXO å˜æ›´ï¼Œç›´æ¥æ“ä½œå­˜å‚¨æ›´æ–° UTXO é›†åˆã€‚
//
// ğŸ“‹ **å¤„ç†æµç¨‹**ï¼š
// 1. éå†åŒºå—ä¸­çš„æ‰€æœ‰äº¤æ˜“
// 2. å¤„ç†äº¤æ˜“è¾“å…¥ï¼š
//   - ç›´æ¥åˆ é™¤ UTXOï¼ˆutxo:set:{outpoint}ï¼‰
//   - è®°å½•èŠ±è´¹å†å²ï¼ˆutxo:spent:{txHash}:{outputIndex}ï¼‰
//   - æ›´æ–°åœ°å€ç´¢å¼•ï¼ˆä»åœ°å€ç´¢å¼•ä¸­ç§»é™¤ï¼‰
//   - æ£€æŸ¥æ˜¯å¦æ¶ˆè´¹äº†å¼•ç”¨äº¤æ˜“ï¼Œæ”¶é›†éœ€è¦å‡å°‘å¼•ç”¨çš„èµ„æºUTXO
//
// 3. å¤„ç†äº¤æ˜“è¾“å‡ºï¼š
//   - æ„å»ºå®Œæ•´çš„ UTXO å¯¹è±¡
//   - ç›´æ¥å­˜å‚¨ UTXOï¼ˆutxo:set:{outpoint}ï¼‰
//   - æ›´æ–°åœ°å€ç´¢å¼•ï¼ˆæ·»åŠ åˆ°åœ°å€ç´¢å¼•ï¼‰
//
// âš ï¸ **å…³é”®åŸåˆ™**ï¼š
// - UTXO ä»äº¤æ˜“ä¸­æå–
// - âœ… **æ¶æ„ä¿®å¤**ï¼šç›´æ¥æ“ä½œå­˜å‚¨ï¼Œä¸ä¾èµ–ä¸šåŠ¡å±‚ç»„ä»¶
// - æ‰€æœ‰æ“ä½œåœ¨äº‹åŠ¡ä¸­å®Œæˆ
// - å¼•ç”¨è®¡æ•°ç®¡ç†åœ¨äº‹åŠ¡æäº¤åé€šè¿‡å›è°ƒå¤„ç†
//
// å‚æ•°ï¼š
//   - ctx: ä¸Šä¸‹æ–‡
//   - tx: BadgerDB äº‹åŠ¡
//   - block: åŒºå—æ•°æ®
func (s *Service) writeUTXOChanges(
	ctx context.Context,
	tx storage.BadgerTransaction,
	block *core.Block,
) error {
	if s.txHashClient == nil {
		return fmt.Errorf("txHashClient æœªåˆå§‹åŒ–")
	}

	transactions := block.Body.Transactions
	if transactions == nil {
		return nil
	}

	// éå†åŒºå—ä¸­çš„æ‰€æœ‰äº¤æ˜“
	for i, txProto := range transactions {
		// è®¡ç®—äº¤æ˜“å“ˆå¸Œï¼ˆç”¨äºæ„å»º OutPointï¼Œä½¿ç”¨ gRPC æœåŠ¡ï¼‰
		txReq := &transaction.ComputeHashRequest{
			Transaction: txProto,
		}
		txResp, err := s.txHashClient.ComputeHash(ctx, txReq)
		if err != nil {
			return fmt.Errorf("è®¡ç®—äº¤æ˜“å“ˆå¸Œå¤±è´¥ï¼ˆäº¤æ˜“ %dï¼‰: %w", i, err)
		}

		if !txResp.IsValid {
			return fmt.Errorf("äº¤æ˜“ %d ç»“æ„æ— æ•ˆ", i)
		}

		txHash := txResp.Hash

		// 1. å¤„ç†äº¤æ˜“è¾“å…¥
		for _, input := range txProto.Inputs {
			if input.PreviousOutput == nil {
				continue
			}

			// âœ… å¤„ç†å¼•ç”¨å‹è¾“å…¥ï¼ˆis_reference_only=trueï¼‰
			if input.IsReferenceOnly {
				// å¼•ç”¨å‹è¾“å…¥ï¼šä¸åˆ é™¤ UTXOï¼Œä»…æ›´æ–°èµ„æºä½¿ç”¨ç»Ÿè®¡ï¼ˆä¸å½¢æˆè·¨åŒºå—é”å®šè¯­ä¹‰ï¼‰
				if err := s.recordReferenceOnlyUsageInTransaction(ctx, tx, input.PreviousOutput, block.Header.Height, block.Header.Timestamp); err != nil {
					return fmt.Errorf("è®°å½•å¼•ç”¨å‹è¾“å…¥ä½¿ç”¨ç»Ÿè®¡å¤±è´¥ï¼ˆäº¤æ˜“ %dï¼‰: %w", i, err)
				}
				continue
			}

			// æ¶ˆè´¹å‹è¾“å…¥ï¼šåˆ é™¤ UTXO
			// âœ… æ¶æ„ä¿®å¤ï¼šç›´æ¥æ“ä½œå­˜å‚¨ï¼Œä¸è°ƒç”¨ eutxo.UTXOWriter
			if err := s.deleteUTXOInTransaction(ctx, tx, input.PreviousOutput); err != nil {
				return fmt.Errorf("åˆ é™¤ UTXO å¤±è´¥ï¼ˆäº¤æ˜“ %dï¼Œè¾“å…¥ï¼‰: %w", i, err)
			}

			// è®°å½•èŠ±è´¹å†å²ï¼ˆutxo:spent:{txHash}:{outputIndex}ï¼‰
			spentKey := fmt.Sprintf("utxo:spent:%x:%d", input.PreviousOutput.TxId, input.PreviousOutput.OutputIndex)
			spentValue := make([]byte, 32+8)
			copy(spentValue[0:32], txHash)
			copy(spentValue[32:40], uint64ToBytes(block.Header.Height))
			if err := tx.Set([]byte(spentKey), spentValue); err != nil {
				return fmt.Errorf("è®°å½•èŠ±è´¹å†å²å¤±è´¥ï¼ˆäº¤æ˜“ %dï¼‰: %w", i, err)
			}
		}

		// 2. å¤„ç†äº¤æ˜“è¾“å‡ºï¼ˆåˆ›å»º UTXOï¼‰
		for j, output := range txProto.Outputs {
			if output == nil {
				continue
			}

			// æ„å»ºå®Œæ•´çš„ UTXO å¯¹è±¡
			var category utxo.UTXOCategory
			if output.GetAsset() != nil {
				category = utxo.UTXOCategory_UTXO_CATEGORY_ASSET
			} else if output.GetResource() != nil {
				category = utxo.UTXOCategory_UTXO_CATEGORY_RESOURCE
			} else if output.GetState() != nil {
				category = utxo.UTXOCategory_UTXO_CATEGORY_STATE
			} else {
				category = utxo.UTXOCategory_UTXO_CATEGORY_UNKNOWN
			}

			utxoObj := &utxo.UTXO{
				Outpoint: &transaction.OutPoint{
					TxId:        txHash,
					OutputIndex: uint32(j),
				},
				Category:     category,
				OwnerAddress: output.Owner,
				BlockHeight:  block.Header.Height,
				Status:       utxo.UTXOLifecycleStatus_UTXO_LIFECYCLE_AVAILABLE,
				ContentStrategy: &utxo.UTXO_CachedOutput{
					CachedOutput: output,
				},
			}

			// âœ… æ¶æ„ä¿®å¤ï¼šç›´æ¥æ“ä½œå­˜å‚¨ï¼Œä¸è°ƒç”¨ eutxo.UTXOWriter
			if err := s.createUTXOInTransaction(ctx, tx, utxoObj); err != nil {
				return fmt.Errorf("åˆ›å»º UTXO å¤±è´¥ï¼ˆäº¤æ˜“ %dï¼Œè¾“å‡º %dï¼‰: %w", i, j, err)
			}
		}
	}

	if s.logger != nil {
		s.logger.Debugf("âœ… UTXO å˜æ›´å·²å¤„ç†: height=%d, txCount=%d",
			block.Header.Height, len(transactions))
	}

	return nil
}

// recordReferenceOnlyUsageInTransaction è®°å½•ä¸€æ¬¡å¼•ç”¨å‹è¾“å…¥ï¼ˆis_reference_only=trueï¼‰çš„ä½¿ç”¨ç»Ÿè®¡ã€‚
//
// å½»åº•è¿­ä»£è¯­ä¹‰ï¼š
// - å¼•ç”¨å‹è¾“å…¥æ˜¯â€œåªè¯»ä¾èµ–â€ï¼Œä¸å½¢æˆè·¨åŒºå—çš„é”å®šè¯­ä¹‰ï¼›
// - å› æ­¤ä¸å†ç»´æŠ¤â€œä¼šå½±å“åˆ é™¤/æ¶ˆè´¹â€çš„å¼•ç”¨è®¡æ•°é—¨é—¸ï¼›
// - ä»…æ›´æ–° ResourceUsageCountersï¼šTotalReferenceTimes + LastReference*ï¼Œç”¨äºè§‚æµ‹/ç»Ÿè®¡ã€‚
func (s *Service) recordReferenceOnlyUsageInTransaction(
	ctx context.Context,
	tx storage.BadgerTransaction,
	outpoint *transaction.OutPoint,
	blockHeight uint64,
	blockTimestamp uint64,
) error {
	if outpoint == nil || len(outpoint.TxId) != 32 {
		return fmt.Errorf("invalid outpoint")
	}

	// 1) ç¡®è®¤ referenced UTXO å­˜åœ¨ä¸”ä¸º ResourceOutputï¼ˆå¦åˆ™å¼•ç”¨å‹è¾“å…¥æ— æ„ä¹‰ï¼Œåº”è§†ä¸ºæ— æ•ˆåŒºå—ï¼‰
	utxoKey := buildUTXOKey(outpoint)
	utxoBytes, err := tx.Get([]byte(utxoKey))
	if err != nil || len(utxoBytes) == 0 {
		return fmt.Errorf("referenced utxo not found: %s", utxoKey)
	}
	utxoObj := &utxo.UTXO{}
	if err := proto.Unmarshal(utxoBytes, utxoObj); err != nil {
		return fmt.Errorf("unmarshal referenced utxo failed: %w", err)
	}
	cached := utxoObj.GetCachedOutput()
	if cached == nil || cached.GetResource() == nil {
		return fmt.Errorf("referenced utxo is not ResourceOutput: %s", utxoKey)
	}

	// 2) è·å–/åˆå§‹åŒ– counters
	instanceID := eutxoiface.NewResourceInstanceID(outpoint.TxId, uint32(outpoint.OutputIndex))
	countersKey := fmt.Sprintf("resource:counters-instance:%s", instanceID.Encode())

	counters := &eutxoiface.ResourceUsageCounters{}
	data, _ := tx.Get([]byte(countersKey))
	if len(data) > 0 {
		_ = json.Unmarshal(data, counters)
	}

	// å¦‚æœ counters ç¼ºå°‘ InstanceID/CodeIDï¼Œåˆ™å°è¯•ä» resource:utxo-instance è®°å½•æ¢å¤
	if len(counters.InstanceID.TxId) == 0 || len(counters.CodeID) == 0 {
		recordKey := fmt.Sprintf("resource:utxo-instance:%s", instanceID.Encode())
		recordBytes, rerr := tx.Get([]byte(recordKey))
		if rerr != nil || len(recordBytes) == 0 {
			return fmt.Errorf("missing ResourceUTXORecord for counters init: %s", recordKey)
		}
		record := &eutxoiface.ResourceUTXORecord{}
		if err := json.Unmarshal(recordBytes, record); err != nil {
			return fmt.Errorf("unmarshal ResourceUTXORecord failed: %w", err)
		}
		// æ—§æ•°æ®å…¼å®¹ï¼šå¦‚æœ InstanceID/CodeID ä¸ºç©ºï¼Œåˆ™ä»æ—§å­—æ®µæ¢å¤
		if len(record.InstanceID.TxId) == 0 && len(record.TxId) == 32 {
			record.InstanceID = eutxoiface.NewResourceInstanceID(record.TxId, record.OutputIndex)
		}
		if len(record.CodeID) == 0 && len(record.ContentHash) == 32 {
			record.CodeID = eutxoiface.NewResourceCodeID(record.ContentHash)
		}
		counters.InstanceID = record.InstanceID
		counters.CodeID = record.CodeID
	}

	// 3) æ›´æ–°ç»Ÿè®¡å­—æ®µ
	counters.TotalReferenceTimes++
	counters.LastReferenceBlockHeight = blockHeight
	counters.LastReferenceTimestamp = blockTimestamp
	counters.EnsureBackwardCompatibility()

	// 4) å†™å›
	encoded, err := json.Marshal(counters)
	if err != nil {
		return fmt.Errorf("marshal ResourceUsageCounters failed: %w", err)
	}
	if err := tx.Set([]byte(countersKey), encoded); err != nil {
		return fmt.Errorf("write ResourceUsageCounters failed: %w", err)
	}
	return nil
}

// createUTXOInTransaction åœ¨äº‹åŠ¡ä¸­åˆ›å»º UTXO
//
// ğŸ¯ **æ ¸å¿ƒèŒè´£**ï¼š
// ç›´æ¥æ“ä½œå­˜å‚¨ï¼Œåˆ›å»º UTXO å¹¶æ›´æ–°ç´¢å¼•ã€‚
//
// âš ï¸ **æ¶æ„ä¿®å¤**ï¼š
// æ­¤æ–¹æ³•ç›´æ¥æ“ä½œå­˜å‚¨ï¼Œä¸ä¾èµ–ä¸šåŠ¡å±‚ç»„ä»¶ï¼ˆeutxo.UTXOWriterï¼‰ã€‚
//
// å‚æ•°ï¼š
//   - ctx: ä¸Šä¸‹æ–‡
//   - tx: BadgerDB äº‹åŠ¡
//   - utxoObj: UTXO å¯¹è±¡
func (s *Service) createUTXOInTransaction(
	ctx context.Context,
	tx storage.BadgerTransaction,
	utxoObj *utxo.UTXO,
) error {
	if utxoObj == nil || utxoObj.Outpoint == nil {
		return fmt.Errorf("æ— æ•ˆçš„ UTXO å¯¹è±¡")
	}

	// 1. åºåˆ—åŒ– UTXO
	utxoData, err := proto.Marshal(utxoObj)
	if err != nil {
		return fmt.Errorf("åºåˆ—åŒ– UTXO å¤±è´¥: %w", err)
	}

	// 2. æ„é€ å­˜å‚¨é”®ï¼ˆutxo:set:{txHash}:{outputIndex}ï¼‰
	utxoKey := buildUTXOKey(utxoObj.Outpoint)

	// 3. åœ¨äº‹åŠ¡ä¸­å­˜å‚¨ UTXO
	if err := tx.Set([]byte(utxoKey), utxoData); err != nil {
		return fmt.Errorf("å­˜å‚¨ UTXO å¤±è´¥: %w", err)
	}

	// 4. ğŸ”§ æ›´æ–°åœ°å€ç´¢å¼•ï¼ˆindex:address:{address} -> []outpointï¼‰
	if err := s.addToAddressIndexInTransaction(tx, utxoObj); err != nil {
		// ç´¢å¼•æ›´æ–°å¤±è´¥ä¸åº”è¯¥é˜»æ­¢ UTXO åˆ›å»ºï¼Œè®°å½•è­¦å‘Šå³å¯
		if s.logger != nil {
			s.logger.Warnf("æ›´æ–°åœ°å€ç´¢å¼•å¤±è´¥: %v", err)
		}
	}

	return nil
}

// deleteUTXOInTransaction åœ¨äº‹åŠ¡ä¸­åˆ é™¤ UTXO
//
// ğŸ¯ **æ ¸å¿ƒèŒè´£**ï¼š
// ç›´æ¥æ“ä½œå­˜å‚¨ï¼Œåˆ é™¤ UTXO å¹¶æ›´æ–°ç´¢å¼•ã€‚
//
// âš ï¸ **æ¶æ„ä¿®å¤**ï¼š
// æ­¤æ–¹æ³•ç›´æ¥æ“ä½œå­˜å‚¨ï¼Œä¸ä¾èµ–ä¸šåŠ¡å±‚ç»„ä»¶ï¼ˆeutxo.UTXOWriterï¼‰ã€‚
//
// âš ï¸ **æ³¨æ„äº‹é¡¹**ï¼š
// - ä¸æ£€æŸ¥å¼•ç”¨è®¡æ•°ï¼ˆå¼•ç”¨è®¡æ•°æ£€æŸ¥åº”åœ¨ä¸šåŠ¡å±‚å®Œæˆï¼‰
// - ç›´æ¥åˆ é™¤ UTXO å’Œç´¢å¼•
//
// å‚æ•°ï¼š
//   - ctx: ä¸Šä¸‹æ–‡
//   - tx: BadgerDB äº‹åŠ¡
//   - outpoint: UTXO çš„è¾“å‡ºç‚¹
func (s *Service) deleteUTXOInTransaction(
	ctx context.Context,
	tx storage.BadgerTransaction,
	outpoint *transaction.OutPoint,
) error {
	if outpoint == nil || outpoint.TxId == nil {
		return fmt.Errorf("æ— æ•ˆçš„ OutPoint")
	}

	// 1. æ„é€ å­˜å‚¨é”®
	utxoKey := buildUTXOKey(outpoint)

	// 2. å…ˆè·å– UTXO å¯¹è±¡ï¼ˆç”¨äºç´¢å¼•ç§»é™¤ï¼‰
	var utxoObj *utxo.UTXO
	data, err := tx.Get([]byte(utxoKey))
	if err == nil && len(data) > 0 {
		tempObj := &utxo.UTXO{}
		if err := proto.Unmarshal(data, tempObj); err == nil {
			utxoObj = tempObj
		} else {
			// ååºåˆ—åŒ–å¤±è´¥ï¼Œè®°å½•è­¦å‘Šä½†ç»§ç»­åˆ é™¤æ“ä½œ
			// å› ä¸ºå³ä½¿æ— æ³•è¯»å–UTXOï¼Œåˆ é™¤æ“ä½œä¹Ÿåº”è¯¥ç»§ç»­
		}
	}

	// 3. åœ¨äº‹åŠ¡ä¸­åˆ é™¤ UTXO
	if err := tx.Delete([]byte(utxoKey)); err != nil {
		return fmt.Errorf("åˆ é™¤ UTXO å¤±è´¥: %w", err)
	}

	// 4. ä»åœ°å€ç´¢å¼•ç§»é™¤
	if utxoObj != nil {
		if err := s.removeFromAddressIndexInTransaction(tx, utxoObj); err != nil {
			// ç´¢å¼•æ›´æ–°å¤±è´¥ä¸åº”è¯¥é˜»æ­¢ UTXO åˆ é™¤ï¼Œè®°å½•è­¦å‘Šå³å¯
			if s.logger != nil {
				s.logger.Warnf("ç§»é™¤åœ°å€ç´¢å¼•å¤±è´¥: %v", err)
			}
		}
	}

	return nil
}

// addToAddressIndexInTransaction åœ¨äº‹åŠ¡ä¸­æ·»åŠ  UTXO åˆ°åœ°å€ç´¢å¼•
//
// ğŸ”§ ç´¢å¼•æ ¼å¼ï¼šindex:address:{address} -> []outpointï¼ˆæ¯ä¸ª outpoint ä¸º 36 å­—èŠ‚ï¼š32å­—èŠ‚ txHash + 4å­—èŠ‚ outputIndexï¼‰
func (s *Service) addToAddressIndexInTransaction(tx storage.BadgerTransaction, utxoObj *utxo.UTXO) error {
	if utxoObj == nil || utxoObj.Outpoint == nil {
		return nil
	}

	output := utxoObj.GetCachedOutput()
	if output == nil || len(output.Owner) == 0 {
		return nil
	}

	// ğŸ”§ ä¿®å¤ï¼šä½¿ç”¨ç»Ÿä¸€çš„åœ°å€ç´¢å¼•é”®æ ¼å¼ï¼ˆä¸æŸ¥è¯¢å±‚ä¿æŒä¸€è‡´ï¼‰
	addressKey := fmt.Sprintf("index:address:%x", output.Owner)

	// ç¼–ç  outpointï¼ˆ32å­—èŠ‚ txHash + 4å­—èŠ‚ outputIndexï¼‰
	outpointBytes := make([]byte, 36)
	copy(outpointBytes[0:32], utxoObj.Outpoint.TxId)
	binary.BigEndian.PutUint32(outpointBytes[32:36], utxoObj.Outpoint.OutputIndex)

	// è¯»å–ç°æœ‰ç´¢å¼•
	existingData, err := tx.Get([]byte(addressKey))
	var existingOutpoints []byte
	if err == nil && len(existingData) > 0 {
		existingOutpoints = existingData
	}

	// æ£€æŸ¥æ˜¯å¦å·²å­˜åœ¨ï¼ˆé¿å…é‡å¤ï¼‰
	if len(existingOutpoints) > 0 {
		for i := 0; i < len(existingOutpoints); i += 36 {
			if i+36 <= len(existingOutpoints) {
				if string(existingOutpoints[i:i+36]) == string(outpointBytes) {
					// å·²å­˜åœ¨ï¼Œä¸é‡å¤æ·»åŠ 
					return nil
				}
			}
		}
	}

	// è¿½åŠ æ–°çš„ outpoint
	newOutpoints := append(existingOutpoints, outpointBytes...)
	return tx.Set([]byte(addressKey), newOutpoints)
}

// removeFromAddressIndexInTransaction åœ¨äº‹åŠ¡ä¸­ä»åœ°å€ç´¢å¼•ç§»é™¤ UTXO
func (s *Service) removeFromAddressIndexInTransaction(tx storage.BadgerTransaction, utxoObj *utxo.UTXO) error {
	if utxoObj == nil || utxoObj.Outpoint == nil {
		return nil
	}

	output := utxoObj.GetCachedOutput()
	if output == nil || len(output.Owner) == 0 {
		return nil
	}

	// ğŸ”§ ä¿®å¤ï¼šä½¿ç”¨ç»Ÿä¸€çš„åœ°å€ç´¢å¼•é”®æ ¼å¼ï¼ˆä¸æŸ¥è¯¢å±‚ä¿æŒä¸€è‡´ï¼‰
	addressKey := fmt.Sprintf("index:address:%x", output.Owner)

	// ç¼–ç  outpoint
	outpointBytes := make([]byte, 36)
	copy(outpointBytes[0:32], utxoObj.Outpoint.TxId)
	binary.BigEndian.PutUint32(outpointBytes[32:36], utxoObj.Outpoint.OutputIndex)

	// è¯»å–ç°æœ‰ç´¢å¼•
	existingData, err := tx.Get([]byte(addressKey))
	if err != nil || len(existingData) == 0 {
		return nil // ç´¢å¼•ä¸å­˜åœ¨ï¼Œæ— éœ€ç§»é™¤
	}

	// æŸ¥æ‰¾å¹¶ç§»é™¤ outpoint
	var newOutpoints []byte
	for i := 0; i < len(existingData); i += 36 {
		if i+36 <= len(existingData) {
			existingOutpoint := existingData[i : i+36]
			if string(existingOutpoint) != string(outpointBytes) {
				newOutpoints = append(newOutpoints, existingOutpoint...)
			}
		}
	}

	// æ›´æ–°ç´¢å¼•
	if len(newOutpoints) == 0 {
		return tx.Delete([]byte(addressKey))
	}
	return tx.Set([]byte(addressKey), newOutpoints)
}

// buildUTXOKey æ„é€  UTXO å­˜å‚¨é”®
//
// æ ¼å¼ï¼šutxo:set:{txHash}:{outputIndex}
// ç¬¦åˆ docs/system/designs/storage/data-architecture.md è§„èŒƒ
func buildUTXOKey(outpoint *transaction.OutPoint) string {
	return fmt.Sprintf("utxo:set:%x:%d", outpoint.TxId, outpoint.OutputIndex)
}

// uint32ToBytes å°† uint32 è½¬æ¢ä¸ºå­—èŠ‚æ•°ç»„ï¼ˆè¾…åŠ©å‡½æ•°ï¼‰
func uint32ToBytes(val uint32) []byte {
	bytes := make([]byte, 4)
	bytes[0] = byte(val >> 24)
	bytes[1] = byte(val >> 16)
	bytes[2] = byte(val >> 8)
	bytes[3] = byte(val)
	return bytes
}

// bytesToUint32 å°†å­—èŠ‚æ•°ç»„è½¬æ¢ä¸º uint32ï¼ˆè¾…åŠ©å‡½æ•°ï¼‰
func bytesToUint32(bytes []byte) uint32 {
	if len(bytes) < 4 {
		return 0
	}
	return uint32(bytes[0])<<24 | uint32(bytes[1])<<16 | uint32(bytes[2])<<8 | uint32(bytes[3])
}
