package utxo

import (
	"context"
	"fmt"

	"google.golang.org/protobuf/proto"

	transaction "github.com/weisyn/v1/pb/blockchain/block/transaction"
	utxo "github.com/weisyn/v1/pb/blockchain/utxo"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/storage"
)

// ============================================================================
//                           ğŸ”„ UTXOå¼•ç”¨ç®¡ç†æ“ä½œå®ç°
// ============================================================================

// referenceUTXO å¼•ç”¨UTXOï¼ˆå¢åŠ å¼•ç”¨è®¡æ•°ï¼‰
//
// ğŸ¯ **ç³»ç»Ÿå®šä½**ï¼šResourceUTXOå¹¶å‘æ§åˆ¶æ ¸å¿ƒ
// å¯¹ResourceUTXOå¢åŠ å¼•ç”¨è®¡æ•°ï¼Œé˜²æ­¢åœ¨è¢«å¼•ç”¨æœŸé—´è¢«æ¶ˆè´¹ã€‚
// è¿™æ˜¯åˆçº¦æ‰§è¡Œã€èµ„æºè®¿é—®ç­‰æ“ä½œçš„å¹¶å‘å®‰å…¨ä¿éšœã€‚
//
// å®ç°è¦ç‚¹ï¼š
// - ç±»å‹æ£€æŸ¥ï¼šåªå¯¹ResourceUTXOæœ‰æ•ˆï¼Œå…¶ä»–ç±»å‹UTXOå¿½ç•¥æ­¤æ“ä½œ
// - åŸå­æ“ä½œï¼šå¼•ç”¨è®¡æ•°çš„å¢åŠ å¿…é¡»æ˜¯åŸå­æ€§çš„
// - çŠ¶æ€éªŒè¯ï¼šæ£€æŸ¥UTXOæ˜¯å¦å¯ä»¥è¢«å¼•ç”¨ï¼ˆçŠ¶æ€ä¸ºAVAILABLEï¼‰
// - å¹¶å‘å®‰å…¨ï¼šå¤šä¸ªgoroutineåŒæ—¶å¼•ç”¨åŒä¸€UTXOçš„å®‰å…¨å¤„ç†
// - ä¸Šé™æ£€æŸ¥ï¼šæ£€æŸ¥æ˜¯å¦è¶…è¿‡æœ€å¤§å¹¶å‘å¼•ç”¨æ•°é™åˆ¶
func (m *Manager) referenceUTXO(ctx context.Context, outpoint *transaction.OutPoint) error {
	if m.logger != nil {
		m.logger.Debugf("å¼•ç”¨UTXOå®ç° - txId: %x, index: %d", outpoint.TxId, outpoint.OutputIndex)
	}

	// 1. éªŒè¯OutPointå‚æ•°
	if outpoint == nil {
		return fmt.Errorf("OutPointä¸èƒ½ä¸ºç©º")
	}
	if len(outpoint.TxId) != 32 {
		return fmt.Errorf("äº¤æ˜“å“ˆå¸Œé•¿åº¦é”™è¯¯ï¼ŒæœŸæœ›32å­—èŠ‚ï¼Œå®é™…%då­—èŠ‚", len(outpoint.TxId))
	}

	// 2. æŸ¥è¯¢ç›®æ ‡UTXO
	utxoObj, err := m.getUTXO(ctx, outpoint)
	if err != nil {
		return fmt.Errorf("æŸ¥è¯¢UTXOå¤±è´¥: %w", err)
	}
	if utxoObj == nil {
		return fmt.Errorf("UTXOä¸å­˜åœ¨æˆ–å·²æ¶ˆè´¹")
	}

	// ğŸ”¥ ä¿®æ­£ï¼šæ”¯æŒAssetUTXOå’ŒResourceUTXOä¸¤ç§ç±»å‹çš„é”å®š
	if utxoObj.Category == utxo.UTXOCategory_UTXO_CATEGORY_ASSET {
		// AssetUTXOï¼šç®€å•çŠ¶æ€å˜æ›´ï¼ˆä¸éœ€è¦å¼•ç”¨è®¡æ•°ï¼‰
		return m.referenceAssetUTXO(ctx, outpoint, utxoObj)
	} else if utxoObj.Category == utxo.UTXOCategory_UTXO_CATEGORY_RESOURCE {
		// ResourceUTXOï¼šä½¿ç”¨å¼•ç”¨è®¡æ•°æœºåˆ¶ï¼ˆåŸæœ‰é€»è¾‘ï¼‰
		return m.referenceResourceUTXO(ctx, outpoint, utxoObj)
	} else {
		if m.logger != nil {
			m.logger.Debugf("ä¸æ”¯æŒçš„UTXOç±»å‹ï¼Œè·³è¿‡å¼•ç”¨æ“ä½œ - category: %s", utxoObj.Category.String())
		}
		return nil
	}

}

// referenceAssetUTXO å¼•ç”¨AssetUTXOï¼ˆç®€å•çŠ¶æ€å˜æ›´ï¼‰
//
// ğŸ¯ **AssetUTXOé”å®šæ ¸å¿ƒå®ç°**
//
// ä¸ºAssetUTXOæä¾›ç®€å•çš„çŠ¶æ€é”å®šæœºåˆ¶ï¼Œç”¨äºäº¤æ˜“æäº¤åé˜²æ­¢åŒèŠ±ã€‚
// ä¸ResourceUTXOä¸åŒï¼ŒAssetUTXOä¸éœ€è¦å¼•ç”¨è®¡æ•°ï¼Œåªéœ€è¦çŠ¶æ€å˜æ›´ã€‚
//
// å®ç°é€»è¾‘ï¼š
// - AVAILABLE â†’ REFERENCEDï¼ˆé”å®šçŠ¶æ€ï¼‰
// - ä¸ä½¿ç”¨å¼•ç”¨è®¡æ•°æœºåˆ¶
// - äº¤æ˜“ç¡®è®¤åå˜ä¸ºCONSUMEDï¼Œå¤±è´¥æ—¶æ¢å¤AVAILABLE
//
// å‚æ•°ï¼š
//   - ctx: ä¸Šä¸‹æ–‡
//   - outpoint: UTXOä½ç½®æ ‡è¯†
//   - utxoObj: UTXOå¯¹è±¡
//
// è¿”å›ï¼š
//   - error: é”å®šé”™è¯¯
func (m *Manager) referenceAssetUTXO(ctx context.Context, outpoint *transaction.OutPoint, utxoObj *utxo.UTXO) error {
	// 1. éªŒè¯UTXOçŠ¶æ€ï¼ˆåªèƒ½å¯¹AVAILABLEçŠ¶æ€çš„UTXOåŠ é”ï¼‰
	if utxoObj.Status != utxo.UTXOLifecycleStatus_UTXO_LIFECYCLE_AVAILABLE {
		return fmt.Errorf("AssetUTXOçŠ¶æ€ä¸å¯é”å®šï¼Œå½“å‰çŠ¶æ€: %s", utxoObj.Status.String())
	}

	// 2. æ„å»ºUTXOå­˜å‚¨é”®
	utxoKey := formatUTXOKey(outpoint.TxId, outpoint.OutputIndex)

	// 3. ä½¿ç”¨äº‹åŠ¡è¿›è¡ŒåŸå­çŠ¶æ€æ›´æ–°
	return m.badgerStore.RunInTransaction(ctx, func(tx storage.BadgerTransaction) error {
		// 3.1. åœ¨äº‹åŠ¡å†…é‡æ–°è·å–UTXOæ•°æ®ï¼ˆé˜²æ­¢å¹¶å‘ä¿®æ”¹ï¼‰
		currentData, err := tx.Get(utxoKey)
		if err != nil {
			return fmt.Errorf("äº‹åŠ¡å†…è·å–UTXOæ•°æ®å¤±è´¥: %w", err)
		}
		if currentData == nil {
			return fmt.Errorf("UTXOåœ¨äº‹åŠ¡æ‰§è¡ŒæœŸé—´å·²è¢«åˆ é™¤")
		}

		// 3.2. ååºåˆ—åŒ–å½“å‰UTXOå¯¹è±¡
		var currentUTXO utxo.UTXO
		if err := proto.Unmarshal(currentData, &currentUTXO); err != nil {
			return fmt.Errorf("ååºåˆ—åŒ–å½“å‰UTXOæ•°æ®å¤±è´¥: %w", err)
		}

		// 3.3. å†æ¬¡éªŒè¯UTXOçŠ¶æ€ï¼ˆé˜²æ­¢å¹¶å‘æœŸé—´çŠ¶æ€å˜æ›´ï¼‰
		if currentUTXO.Status != utxo.UTXOLifecycleStatus_UTXO_LIFECYCLE_AVAILABLE {
			return fmt.Errorf("UTXOçŠ¶æ€åœ¨äº‹åŠ¡æœŸé—´å·²å˜æ›´ä¸º: %s", currentUTXO.Status.String())
		}

		// 3.4. æ›´æ–°çŠ¶æ€ä¸ºREFERENCED
		currentUTXO.Status = utxo.UTXOLifecycleStatus_UTXO_LIFECYCLE_REFERENCED

		// 3.5. åºåˆ—åŒ–æ›´æ–°åçš„UTXOå¯¹è±¡
		updatedData, err := proto.Marshal(&currentUTXO)
		if err != nil {
			return fmt.Errorf("åºåˆ—åŒ–æ›´æ–°çš„UTXOå¤±è´¥: %w", err)
		}

		// 3.6. åœ¨äº‹åŠ¡å†…å†™å…¥æ›´æ–°çš„UTXOæ•°æ®
		if err := tx.Set(utxoKey, updatedData); err != nil {
			return fmt.Errorf("äº‹åŠ¡å†…æ›´æ–°UTXOæ•°æ®å¤±è´¥: %w", err)
		}

		if m.logger != nil {
			m.logger.Debugf("AssetUTXOé”å®šæˆåŠŸ - txId: %x, index: %d, çŠ¶æ€: AVAILABLE â†’ REFERENCED",
				outpoint.TxId, outpoint.OutputIndex)
		}

		return nil
	})
}

// referenceResourceUTXO å¼•ç”¨ResourceUTXOï¼ˆå¼•ç”¨è®¡æ•°æœºåˆ¶ï¼‰
//
// ğŸ¯ **ResourceUTXOå¼•ç”¨è®¡æ•°æ ¸å¿ƒå®ç°**
//
// å¯¹ResourceUTXOå¢åŠ å¼•ç”¨è®¡æ•°ï¼Œæ”¯æŒå¹¶å‘è®¿é—®æ§åˆ¶ã€‚
// è¿™æ˜¯åŸæœ‰çš„ResourceUTXOå¼•ç”¨é€»è¾‘ï¼Œä¿æŒä¸å˜ã€‚
//
// å‚æ•°ï¼š
//   - ctx: ä¸Šä¸‹æ–‡
//   - outpoint: UTXOä½ç½®æ ‡è¯†
//   - utxoObj: UTXOå¯¹è±¡
//
// è¿”å›ï¼š
//   - error: å¼•ç”¨é”™è¯¯
func (m *Manager) referenceResourceUTXO(ctx context.Context, outpoint *transaction.OutPoint, utxoObj *utxo.UTXO) error {
	// 1. éªŒè¯UTXOçŠ¶æ€ï¼ˆå¿…é¡»æ˜¯AVAILABLEæˆ–REFERENCEDï¼‰
	if utxoObj.Status == utxo.UTXOLifecycleStatus_UTXO_LIFECYCLE_CONSUMED {
		return fmt.Errorf("UTXOå·²è¢«æ¶ˆè´¹ï¼Œæ— æ³•å¼•ç”¨")
	}

	// 2. è·å–ResourceUTXOçº¦æŸ
	resourceConstraints := utxoObj.GetResourceConstraints()
	if resourceConstraints == nil {
		// å¦‚æœæ²¡æœ‰èµ„æºçº¦æŸï¼Œåˆ›å»ºé»˜è®¤çº¦æŸ
		resourceConstraints = &utxo.ResourceUTXOConstraints{
			ReferenceCount: 0,
		}
		utxoObj.TypeSpecificConstraints = &utxo.UTXO_ResourceConstraints{
			ResourceConstraints: resourceConstraints,
		}
	}

	// 3. æ£€æŸ¥æœ€å¤§å¹¶å‘å¼•ç”¨æ•°é™åˆ¶ï¼ˆå¦‚æœè®¾ç½®ï¼‰
	if resourceConstraints.MaxConcurrentReferences != nil &&
		*resourceConstraints.MaxConcurrentReferences > 0 &&
		resourceConstraints.ReferenceCount >= *resourceConstraints.MaxConcurrentReferences {
		return fmt.Errorf("å·²è¾¾åˆ°æœ€å¤§å¹¶å‘å¼•ç”¨æ•°é™åˆ¶: %d", *resourceConstraints.MaxConcurrentReferences)
	}

	// 4. åŸå­æ€§æ›´æ–°å¼•ç”¨è®¡æ•°å’ŒçŠ¶æ€
	err := m.atomicUpdateReferenceCount(ctx, outpoint, utxoObj, 1)
	if err != nil {
		return fmt.Errorf("åŸå­æ›´æ–°å¼•ç”¨è®¡æ•°å¤±è´¥: %w", err)
	}

	if m.logger != nil {
		m.logger.Debugf("ResourceUTXOå¼•ç”¨æˆåŠŸ - txId: %x, index: %d, æ–°å¼•ç”¨è®¡æ•°: %d",
			outpoint.TxId, outpoint.OutputIndex, resourceConstraints.ReferenceCount+1)
	}

	return nil
}

// unreferenceUTXO è§£é™¤UTXOå¼•ç”¨ï¼ˆå‡å°‘å¼•ç”¨è®¡æ•°ï¼‰
//
// ğŸ¯ **ç³»ç»Ÿå®šä½**ï¼šResourceUTXOå¼•ç”¨å®Œæˆåçš„æ¸…ç†
// å¯¹ResourceUTXOå‡å°‘å¼•ç”¨è®¡æ•°ï¼Œå½“å¼•ç”¨è®¡æ•°å½’é›¶æ—¶å…è®¸è¢«æ¶ˆè´¹ã€‚
// è¿™æ˜¯åˆçº¦æ‰§è¡Œã€èµ„æºè®¿é—®å®Œæˆåçš„å¿…è¦æ¸…ç†æ“ä½œã€‚
//
// å®ç°è¦ç‚¹ï¼š
// - ç±»å‹æ£€æŸ¥ï¼šåªå¯¹ResourceUTXOæœ‰æ•ˆï¼Œå…¶ä»–ç±»å‹UTXOå¿½ç•¥æ­¤æ“ä½œ
// - åŸå­æ“ä½œï¼šå¼•ç”¨è®¡æ•°çš„å‡å°‘å¿…é¡»æ˜¯åŸå­æ€§çš„
// - çŠ¶æ€ç®¡ç†ï¼šå½“å¼•ç”¨è®¡æ•°å½’é›¶æ—¶ï¼ŒçŠ¶æ€ä»REFERENCEDå›åˆ°AVAILABLE
// - å¹¶å‘å®‰å…¨ï¼šå¤šä¸ªgoroutineåŒæ—¶è§£é™¤å¼•ç”¨çš„å®‰å…¨å¤„ç†
// - è¾¹ç•Œæ£€æŸ¥ï¼šé˜²æ­¢å¼•ç”¨è®¡æ•°å‡å°‘åˆ°è´Ÿæ•°
func (m *Manager) unreferenceUTXO(ctx context.Context, outpoint *transaction.OutPoint) error {
	if m.logger != nil {
		m.logger.Debugf("è§£é™¤UTXOå¼•ç”¨å®ç° - txId: %x, index: %d", outpoint.TxId, outpoint.OutputIndex)
	}

	// 1. éªŒè¯OutPointå‚æ•°
	if outpoint == nil {
		return fmt.Errorf("OutPointä¸èƒ½ä¸ºç©º")
	}
	if len(outpoint.TxId) != 32 {
		return fmt.Errorf("äº¤æ˜“å“ˆå¸Œé•¿åº¦é”™è¯¯ï¼ŒæœŸæœ›32å­—èŠ‚ï¼Œå®é™…%då­—èŠ‚", len(outpoint.TxId))
	}

	// 2. æŸ¥è¯¢ç›®æ ‡UTXO
	utxoObj, err := m.getUTXO(ctx, outpoint)
	if err != nil {
		return fmt.Errorf("æŸ¥è¯¢UTXOå¤±è´¥: %w", err)
	}
	if utxoObj == nil {
		return fmt.Errorf("UTXOä¸å­˜åœ¨æˆ–å·²æ¶ˆè´¹")
	}

	// 3. éªŒè¯UTXOç±»å‹ï¼ˆåªæœ‰ResourceUTXOéœ€è¦å¼•ç”¨è®¡æ•°ï¼‰
	if utxoObj.Category != utxo.UTXOCategory_UTXO_CATEGORY_RESOURCE {
		if m.logger != nil {
			m.logger.Debugf("éResourceUTXOç±»å‹ï¼Œè·³è¿‡è§£é™¤å¼•ç”¨æ“ä½œ - category: %s", utxoObj.Category.String())
		}
		return nil // éResourceUTXOç›´æ¥è¿”å›æˆåŠŸ
	}

	// 4. è·å–ResourceUTXOçº¦æŸ
	resourceConstraints := utxoObj.GetResourceConstraints()
	if resourceConstraints == nil {
		return fmt.Errorf("ResourceUTXOç¼ºå°‘å¿…è¦çš„çº¦æŸä¿¡æ¯")
	}

	// 5. éªŒè¯å½“å‰å¼•ç”¨è®¡æ•°ï¼ˆå¿…é¡» > 0ï¼‰
	if resourceConstraints.ReferenceCount == 0 {
		if m.logger != nil {
			m.logger.Warnf("UTXOå¼•ç”¨è®¡æ•°å·²ä¸º0ï¼Œæ— éœ€è§£é™¤å¼•ç”¨ - txId: %x, index: %d", outpoint.TxId, outpoint.OutputIndex)
		}
		return nil // å¼•ç”¨è®¡æ•°å·²ä¸º0ï¼Œç›´æ¥è¿”å›æˆåŠŸ
	}

	// 6. åŸå­æ€§æ›´æ–°å¼•ç”¨è®¡æ•°å’ŒçŠ¶æ€
	err = m.atomicUpdateReferenceCount(ctx, outpoint, utxoObj, -1)
	if err != nil {
		return fmt.Errorf("åŸå­æ›´æ–°å¼•ç”¨è®¡æ•°å¤±è´¥: %w", err)
	}

	if m.logger != nil {
		m.logger.Debugf("UTXOè§£é™¤å¼•ç”¨æˆåŠŸ - txId: %x, index: %d, æ–°å¼•ç”¨è®¡æ•°: %d",
			outpoint.TxId, outpoint.OutputIndex, resourceConstraints.ReferenceCount-1)
	}

	return nil
}

// ============================================================================
//                           ğŸ”§ åŸå­æ€§å¼•ç”¨è®¡æ•°æ›´æ–°
// ============================================================================

// atomicUpdateReferenceCount åŸå­æ€§æ›´æ–°UTXOå¼•ç”¨è®¡æ•°
//
// ğŸ¯ **åŸå­æ€§ä¿éšœ**ï¼šä½¿ç”¨BadgerStoreäº‹åŠ¡æœºåˆ¶ç¡®ä¿å¼•ç”¨è®¡æ•°æ›´æ–°çš„åŸå­æ€§
// è¿™æ˜¯ResourceUTXOå¹¶å‘æ§åˆ¶çš„æ ¸å¿ƒå®ç°ï¼Œå¿…é¡»ä¿è¯åœ¨é«˜å¹¶å‘åœºæ™¯ä¸‹çš„æ•°æ®ä¸€è‡´æ€§ã€‚
//
// å‚æ•°ï¼š
//   - ctx: ä¸Šä¸‹æ–‡
//   - outpoint: UTXOä½ç½®æ ‡è¯†
//   - utxoObj: UTXOå¯¹è±¡ï¼ˆè°ƒç”¨å‰å·²éªŒè¯ï¼‰
//   - delta: å¼•ç”¨è®¡æ•°å˜æ›´é‡ï¼ˆ+1ä¸ºå¼•ç”¨ï¼Œ-1ä¸ºè§£é™¤å¼•ç”¨ï¼‰
//
// è¿”å›ï¼š
//   - error: æ›´æ–°é”™è¯¯
func (m *Manager) atomicUpdateReferenceCount(ctx context.Context, outpoint *transaction.OutPoint, utxoObj *utxo.UTXO, delta int64) error {
	// æ„å»ºUTXOå­˜å‚¨é”®
	utxoKey := formatUTXOKey(outpoint.TxId, outpoint.OutputIndex)

	// ä½¿ç”¨BadgerStoreäº‹åŠ¡è¿›è¡ŒåŸå­æ€§æ›´æ–°
	return m.badgerStore.RunInTransaction(ctx, func(tx storage.BadgerTransaction) error {
		// 1. åœ¨äº‹åŠ¡å†…é‡æ–°è·å–UTXOæ•°æ®ï¼ˆé˜²æ­¢å¹¶å‘ä¿®æ”¹ï¼‰
		currentData, err := tx.Get(utxoKey)
		if err != nil {
			return fmt.Errorf("äº‹åŠ¡å†…è·å–UTXOæ•°æ®å¤±è´¥: %w", err)
		}
		if currentData == nil {
			return fmt.Errorf("UTXOåœ¨äº‹åŠ¡æ‰§è¡ŒæœŸé—´å·²è¢«åˆ é™¤")
		}

		// 2. ååºåˆ—åŒ–å½“å‰UTXOå¯¹è±¡
		var currentUTXO utxo.UTXO
		if err := proto.Unmarshal(currentData, &currentUTXO); err != nil {
			return fmt.Errorf("ååºåˆ—åŒ–å½“å‰UTXOæ•°æ®å¤±è´¥: %w", err)
		}

		// 3. å†æ¬¡éªŒè¯UTXOç±»å‹å’ŒçŠ¶æ€ï¼ˆé˜²æ­¢å¹¶å‘æœŸé—´çŠ¶æ€å˜æ›´ï¼‰
		if currentUTXO.Category != utxo.UTXOCategory_UTXO_CATEGORY_RESOURCE {
			return fmt.Errorf("UTXOç±»å‹åœ¨äº‹åŠ¡æœŸé—´å·²å˜æ›´")
		}
		if currentUTXO.Status == utxo.UTXOLifecycleStatus_UTXO_LIFECYCLE_CONSUMED {
			return fmt.Errorf("UTXOåœ¨äº‹åŠ¡æœŸé—´å·²è¢«æ¶ˆè´¹")
		}

		// 4. è·å–æˆ–åˆ›å»ºResourceUTXOçº¦æŸ
		resourceConstraints := currentUTXO.GetResourceConstraints()
		if resourceConstraints == nil {
			resourceConstraints = &utxo.ResourceUTXOConstraints{
				ReferenceCount: 0,
			}
			currentUTXO.TypeSpecificConstraints = &utxo.UTXO_ResourceConstraints{
				ResourceConstraints: resourceConstraints,
			}
		}

		// 5. è®¡ç®—æ–°çš„å¼•ç”¨è®¡æ•°
		newReferenceCount := int64(resourceConstraints.ReferenceCount) + delta
		if newReferenceCount < 0 {
			return fmt.Errorf("å¼•ç”¨è®¡æ•°ä¸èƒ½ä¸ºè´Ÿæ•°ï¼Œå½“å‰è®¡æ•°: %d, å˜æ›´é‡: %d", resourceConstraints.ReferenceCount, delta)
		}

		// 6. æ£€æŸ¥å¹¶å‘å¼•ç”¨æ•°é™åˆ¶ï¼ˆä»…åœ¨å¢åŠ å¼•ç”¨æ—¶æ£€æŸ¥ï¼‰
		if delta > 0 {
			if resourceConstraints.MaxConcurrentReferences != nil &&
				*resourceConstraints.MaxConcurrentReferences > 0 &&
				uint64(newReferenceCount) > *resourceConstraints.MaxConcurrentReferences {
				return fmt.Errorf("è¶…è¿‡æœ€å¤§å¹¶å‘å¼•ç”¨æ•°é™åˆ¶: %d", *resourceConstraints.MaxConcurrentReferences)
			}
		}

		// 7. æ›´æ–°å¼•ç”¨è®¡æ•°
		resourceConstraints.ReferenceCount = uint64(newReferenceCount)

		// 8. æ›´æ–°å†å²æ€»å¼•ç”¨æ¬¡æ•°ç»Ÿè®¡ï¼ˆå¯é€‰ï¼‰
		if delta > 0 {
			if resourceConstraints.TotalReferenceCount == nil {
				zero := uint64(0)
				resourceConstraints.TotalReferenceCount = &zero
			}
			*resourceConstraints.TotalReferenceCount++
		}

		// 9. æ ¹æ®å¼•ç”¨è®¡æ•°æ›´æ–°UTXOçŠ¶æ€
		if resourceConstraints.ReferenceCount > 0 {
			// æœ‰å¼•ç”¨æ—¶ï¼ŒçŠ¶æ€ä¸ºREFERENCED
			currentUTXO.Status = utxo.UTXOLifecycleStatus_UTXO_LIFECYCLE_REFERENCED
		} else {
			// æ— å¼•ç”¨æ—¶ï¼ŒçŠ¶æ€ä¸ºAVAILABLE
			currentUTXO.Status = utxo.UTXOLifecycleStatus_UTXO_LIFECYCLE_AVAILABLE
		}

		// 10. åºåˆ—åŒ–æ›´æ–°åçš„UTXOå¯¹è±¡
		updatedData, err := proto.Marshal(&currentUTXO)
		if err != nil {
			return fmt.Errorf("åºåˆ—åŒ–æ›´æ–°çš„UTXOå¤±è´¥: %w", err)
		}

		// 11. åœ¨äº‹åŠ¡å†…å†™å…¥æ›´æ–°çš„UTXOæ•°æ®
		if err := tx.Set(utxoKey, updatedData); err != nil {
			return fmt.Errorf("äº‹åŠ¡å†…æ›´æ–°UTXOæ•°æ®å¤±è´¥: %w", err)
		}

		if m.logger != nil {
			m.logger.Debugf("åŸå­æ›´æ–°å¼•ç”¨è®¡æ•°å®Œæˆ - txId: %x, index: %d, åŸè®¡æ•°: %d, æ–°è®¡æ•°: %d, çŠ¶æ€: %s",
				outpoint.TxId, outpoint.OutputIndex,
				resourceConstraints.ReferenceCount-uint64(delta), resourceConstraints.ReferenceCount,
				currentUTXO.Status.String())
		}

		return nil
	})
}
