// Package utxo UTXOå­˜å‚¨æ“ä½œå®ç°
//
// ğŸ”§ **UTXOå­˜å‚¨æ“ä½œ (UTXO Storage Operations)**
//
// æœ¬æ–‡ä»¶å®ç°UTXOçš„åˆ›å»ºã€æ›´æ–°å’Œåˆ é™¤æ“ä½œï¼ŒåŒ…æ‹¬ï¼š
// - UTXOåˆ›å»ºï¼šä»äº¤æ˜“è¾“å‡ºåˆ›å»ºæ–°çš„UTXOè®°å½•
// - UTXOçŠ¶æ€æ›´æ–°ï¼šæ ‡è®°UTXOä¸ºå·²æ¶ˆè´¹çŠ¶æ€
// - ç´¢å¼•ç®¡ç†ï¼šç»´æŠ¤åœ°å€ç´¢å¼•å’Œç±»åˆ«ç´¢å¼•
//
// ğŸ¯ **æ ¸å¿ƒåŠŸèƒ½**
// - åŸå­æ€§æ“ä½œï¼šæ‰€æœ‰UTXOæ“ä½œéƒ½åœ¨äº‹åŠ¡ä¸­è¿›è¡Œ
// - ç´¢å¼•ä¸€è‡´æ€§ï¼šç¡®ä¿UTXOæ•°æ®ä¸ç´¢å¼•çš„ä¸€è‡´æ€§
// - çŠ¶æ€ç®¡ç†ï¼šæ­£ç¡®ç®¡ç†UTXOçš„ç”Ÿå‘½å‘¨æœŸçŠ¶æ€
package utxo

import (
	"context"
	"encoding/binary"
	"fmt"
	"time"

	"google.golang.org/protobuf/proto"

	transaction "github.com/weisyn/v1/pb/blockchain/block/transaction"
	utxo "github.com/weisyn/v1/pb/blockchain/utxo"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/storage"
)

// createUTXO ä»äº¤æ˜“è¾“å‡ºåˆ›å»ºæ–°çš„UTXO
//
// ğŸ¯ **ç”Ÿäº§çº§UTXOåˆ›å»º**ï¼š
// ä»åŒºå—ä¸­çš„äº¤æ˜“è¾“å‡ºåˆ›å»ºå¯¹åº”çš„UTXOè®°å½•ï¼ŒåŒ…æ‹¬ï¼š
// 1. æ„å»ºå®Œæ•´çš„UTXOå¯¹è±¡
// 2. åºåˆ—åŒ–å¹¶å­˜å‚¨UTXOæ•°æ®
// 3. åˆ›å»ºåœ°å€ç´¢å¼•
// 4. åˆ›å»ºç±»åˆ«ç´¢å¼•ï¼ˆå¦‚æœéœ€è¦ï¼‰
//
// å‚æ•°ï¼š
//   - ctx: ä¸Šä¸‹æ–‡
//   - tx: æ•°æ®åº“äº‹åŠ¡
//   - txHash: äº¤æ˜“å“ˆå¸Œ
//   - outputIndex: è¾“å‡ºç´¢å¼•
//   - output: äº¤æ˜“è¾“å‡º
//   - blockHeight: åŒºå—é«˜åº¦
//
// è¿”å›ï¼š
//   - error: åˆ›å»ºé”™è¯¯
func (m *Manager) createUTXO(ctx context.Context, tx storage.BadgerTransaction, txHash []byte, outputIndex uint32, output *transaction.TxOutput, blockHeight uint64) error {
	if m.logger != nil {
		m.logger.Debugf("åˆ›å»ºUTXO - txHash: %x, index: %d, height: %d", txHash, outputIndex, blockHeight)
	}

	// 1. æ„å»ºUTXOå¯¹è±¡
	utxoObj := &utxo.UTXO{
		Outpoint: &transaction.OutPoint{
			TxId:        txHash,
			OutputIndex: outputIndex,
		},
		Category:         m.determineUTXOCategory(output),
		OwnerAddress:     output.Owner,
		BlockHeight:      blockHeight,
		CreatedTimestamp: uint64(time.Now().Unix()),
		Status:           utxo.UTXOLifecycleStatus_UTXO_LIFECYCLE_AVAILABLE,
	}

	// 2. è®¾ç½®å†…å®¹å­˜å‚¨ç­–ç•¥ï¼ˆç¼“å­˜å®Œæ•´è¾“å‡ºï¼‰
	utxoObj.ContentStrategy = &utxo.UTXO_CachedOutput{
		CachedOutput: output,
	}

	// 3. åºåˆ—åŒ–UTXOæ•°æ®
	utxoData, err := proto.Marshal(utxoObj)
	if err != nil {
		return fmt.Errorf("åºåˆ—åŒ–UTXOå¤±è´¥: %w", err)
	}

	// 4. å­˜å‚¨UTXOæ•°æ®
	utxoKey := formatUTXOKey(txHash, outputIndex)
	if err := tx.Set(utxoKey, utxoData); err != nil {
		return fmt.Errorf("å­˜å‚¨UTXOæ•°æ®å¤±è´¥: %w", err)
	}

	// 5. åˆ›å»ºåœ°å€ç´¢å¼•
	if err := m.createAddressIndex(tx, output.Owner, txHash, outputIndex); err != nil {
		return fmt.Errorf("åˆ›å»ºåœ°å€ç´¢å¼•å¤±è´¥: %w", err)
	}

	// 6. åˆ›å»ºç±»åˆ«ç´¢å¼•ï¼ˆå¦‚æœéœ€è¦ï¼‰
	if err := m.createCategoryIndex(tx, utxoObj.Category, txHash, outputIndex); err != nil {
		return fmt.Errorf("åˆ›å»ºç±»åˆ«ç´¢å¼•å¤±è´¥: %w", err)
	}

	if m.logger != nil {
		m.logger.Debugf("UTXOåˆ›å»ºæˆåŠŸ - txHash: %x, index: %d, category: %s",
			txHash, outputIndex, utxoObj.Category.String())
	}

	return nil
}

// markUTXOAsSpent æ ‡è®°UTXOä¸ºå·²æ¶ˆè´¹çŠ¶æ€
//
// ğŸ¯ **UTXOæ¶ˆè´¹å¤„ç†**ï¼š
// å½“UTXOè¢«äº¤æ˜“è¾“å…¥æ¶ˆè´¹æ—¶è°ƒç”¨ï¼Œè´Ÿè´£ï¼š
// 1. æ›´æ–°UTXOçŠ¶æ€ä¸ºå·²æ¶ˆè´¹
// 2. è®°å½•æ¶ˆè´¹æ—¶é—´å’Œæ¶ˆè´¹äº¤æ˜“
// 3. ä¿æŒç´¢å¼•ä¸å˜ï¼ˆç”¨äºå®¡è®¡å’ŒæŸ¥è¯¢å†å²ï¼‰
func (m *Manager) markUTXOAsSpent(ctx context.Context, tx storage.BadgerTransaction, outpoint *transaction.OutPoint) error {
	if m.logger != nil {
		m.logger.Debugf("æ ‡è®°UTXOå·²æ¶ˆè´¹ - txHash: %x, index: %d", outpoint.TxId, outpoint.OutputIndex)
	}

	// 1. è·å–ç°æœ‰UTXO
	utxoKey := formatUTXOKey(outpoint.TxId, outpoint.OutputIndex)
	utxoData, err := m.badgerStore.Get(ctx, utxoKey)
	if err != nil {
		return fmt.Errorf("è·å–UTXOå¤±è´¥: %w", err)
	}
	if utxoData == nil {
		return fmt.Errorf("UTXOä¸å­˜åœ¨")
	}

	// 2. ååºåˆ—åŒ–UTXO
	var utxoObj utxo.UTXO
	if err := proto.Unmarshal(utxoData, &utxoObj); err != nil {
		return fmt.Errorf("ååºåˆ—åŒ–UTXOå¤±è´¥: %w", err)
	}

	// 3. æ›´æ–°çŠ¶æ€
	utxoObj.Status = utxo.UTXOLifecycleStatus_UTXO_LIFECYCLE_CONSUMED
	// æ³¨æ„ï¼šè¿™é‡Œåº”è¯¥è®°å½•æ¶ˆè´¹è¿™ä¸ªUTXOçš„äº¤æ˜“å“ˆå¸Œï¼Œä½†éœ€è¦ä»ä¸Šå±‚ä¼ å…¥

	// 4. é‡æ–°åºåˆ—åŒ–å¹¶å­˜å‚¨
	updatedData, err := proto.Marshal(&utxoObj)
	if err != nil {
		return fmt.Errorf("åºåˆ—åŒ–æ›´æ–°çš„UTXOå¤±è´¥: %w", err)
	}

	if err := tx.Set(utxoKey, updatedData); err != nil {
		return fmt.Errorf("æ›´æ–°UTXOçŠ¶æ€å¤±è´¥: %w", err)
	}

	if m.logger != nil {
		m.logger.Debugf("UTXOæ ‡è®°ä¸ºå·²æ¶ˆè´¹ - txHash: %x, index: %d", outpoint.TxId, outpoint.OutputIndex)
	}

	return nil
}

// createAddressIndex åˆ›å»ºåœ°å€ç´¢å¼•
func (m *Manager) createAddressIndex(tx storage.BadgerTransaction, address []byte, txHash []byte, outputIndex uint32) error {
	indexKey := formatAddressIndexKey(address, txHash, outputIndex)
	// ç´¢å¼•å€¼å¯ä»¥æ˜¯ç©ºçš„ï¼Œæˆ‘ä»¬åªéœ€è¦é”®å­˜åœ¨
	return tx.Set(indexKey, []byte{1})
}

// createCategoryIndex åˆ›å»ºç±»åˆ«ç´¢å¼•
func (m *Manager) createCategoryIndex(tx storage.BadgerTransaction, category utxo.UTXOCategory, txHash []byte, outputIndex uint32) error {
	// æ„å»ºç±»åˆ«ç´¢å¼•é”®
	categoryStr := category.String()
	categoryKey := make([]byte, len(UTXOCategoryPrefix)+len(categoryStr)+1+len(txHash)+4)
	offset := 0

	// æ·»åŠ å‰ç¼€
	copy(categoryKey[offset:], UTXOCategoryPrefix)
	offset += len(UTXOCategoryPrefix)

	// æ·»åŠ ç±»åˆ«å­—ç¬¦ä¸²
	copy(categoryKey[offset:], categoryStr)
	offset += len(categoryStr)

	// æ·»åŠ åˆ†éš”ç¬¦
	categoryKey[offset] = ':'
	offset++

	// æ·»åŠ äº¤æ˜“å“ˆå¸Œ
	copy(categoryKey[offset:], txHash)
	offset += len(txHash)

	// æ·»åŠ è¾“å‡ºç´¢å¼•
	binary.BigEndian.PutUint32(categoryKey[offset:], outputIndex)

	// ç´¢å¼•å€¼å¯ä»¥æ˜¯ç©ºçš„ï¼Œæˆ‘ä»¬åªéœ€è¦é”®å­˜åœ¨
	return tx.Set(categoryKey, []byte{1})
}

// determineUTXOCategory ç¡®å®šUTXOçš„ç±»åˆ«
func (m *Manager) determineUTXOCategory(output *transaction.TxOutput) utxo.UTXOCategory {
	if output.OutputContent == nil {
		return utxo.UTXOCategory_UTXO_CATEGORY_UNKNOWN
	}

	switch output.OutputContent.(type) {
	case *transaction.TxOutput_Asset:
		return utxo.UTXOCategory_UTXO_CATEGORY_ASSET
	case *transaction.TxOutput_Resource:
		return utxo.UTXOCategory_UTXO_CATEGORY_RESOURCE
	case *transaction.TxOutput_State:
		return utxo.UTXOCategory_UTXO_CATEGORY_STATE
	default:
		return utxo.UTXOCategory_UTXO_CATEGORY_UNKNOWN
	}
}
